--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-12 [俄勒冈州议会罢免协助反防疫限制措施的抗议者强闯州议会大厦的议员](/articles/voa/1040184.md)
+
+6-12 [刘特佐等因试图游说美国停止调查“一马”案并遣返郭文贵受到新的刑事指控](/articles/voa/1040185.md)
+
 6-12 [布林肯向杨洁篪提病毒溯源调查 专家：中国不合作美国仍有办法](/articles/voa/1040186.md)
 
 6-12 [美司法部调查众院民主党人通讯数据被秘密截取一事](/articles/voa/1040187.md)
@@ -596,8 +600,4 @@
 5-29 [拜登向国会提交国防预算案 增加威慑中国的开支 并为军人加薪2.7%](/articles/voa/1040482.md)
 
 5-29 [实验室泄露说升温 科学家：我们需要看到这些证据](/articles/voa/1040483.md)
-
-5-29 [成立冲击国会事件调查委员会的法案在参议院被封杀](/articles/voa/1040484.md)
-
-5-29 [美国对中国涉嫌强迫劳动的渔业产品发出暂扣令](/articles/voa/1040485.md)
 
