--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-12 [中国通过新法律，要对西方的制裁逐个进行反击 - 法国世界报](/articles/rfi/1028157.md)
+
+6-12 [G7目标：重建世界 联合民主国家应对中国挑战 - 要闻分析](/articles/rfi/1028158.md)
+
 6-12 [法国吃货电视节目天才主持人米其林美食名厨埃切贝斯特 - 法国美食](/articles/rfi/1028159.md)
 
 6-12 [通膨疑虑舒缓 欧股收红 – 法国国际广播电台 - RFI](/articles/rfi/1028160.md)
@@ -596,8 +600,4 @@
 6-7 [穆迪：中国三孩政策不太可能大幅改变全国人口出生率 生育概念股应声下跌](/articles/rfi/1028455.md)
 
 6-7 [法国男单 兹韦列夫晋8强 – 法国国际广播电台 - RFI](/articles/rfi/1028456.md)
-
-6-7 [加拿大原住民寄宿学校赫见儿童遗骸 教宗悲痛未道歉 – 法国国际广播电台 - RFI](/articles/rfi/1028457.md)
-
-6-7 [中国5月进口报告增长51％：粮食与铁矿石进口多](/articles/rfi/1028458.md)
 
