--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-12 [美驻港总领事：中国拿外国势力做文章 威胁香港全球商业中心地位](/articles/voa/1040181.md)
+
+6-12 [美驻柬大使馆：使馆武官参观云朗海军基地被拒全面准入](/articles/voa/1040182.md)
+
+6-12 [美国BuzzFeed新闻网站因新疆报道获普利策新闻奖](/articles/voa/1040183.md)
+
 6-12 [俄勒冈州议会罢免协助反防疫限制措施的抗议者强闯州议会大厦的议员](/articles/voa/1040184.md)
 
 6-12 [刘特佐等因试图游说美国停止调查“一马”案并遣返郭文贵受到新的刑事指控](/articles/voa/1040185.md)
@@ -594,10 +600,4 @@
 5-29 [台湾驻美代表萧美琴在美台高层会谈中表达对新冠疫苗急迫需求](/articles/voa/1040479.md)
 
 5-29 [美参院两党分歧难弥 大型抗中法案延至六月表决](/articles/voa/1040480.md)
-
-5-29 [缅甸军事法庭判处纵火焚烧中资工厂的28人长期监禁和苦役](/articles/voa/1040481.md)
-
-5-29 [拜登向国会提交国防预算案 增加威慑中国的开支 并为军人加薪2.7%](/articles/voa/1040482.md)
-
-5-29 [实验室泄露说升温 科学家：我们需要看到这些证据](/articles/voa/1040483.md)
 
