--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-12 [美国科学家看中国火星车驶入新太空竞赛](/articles/voa/1040178.md)
+
+6-12 [美参院两党推动外交抵制北京冬奥 将进一步施压美企](/articles/voa/1040179.md)
+
+6-12 [罗马尼亚总统签署法律，实际上禁止中国和华为参与其5G网络开发](/articles/voa/1040180.md)
+
 6-12 [美驻港总领事：中国拿外国势力做文章 威胁香港全球商业中心地位](/articles/voa/1040181.md)
 
 6-12 [美驻柬大使馆：使馆武官参观云朗海军基地被拒全面准入](/articles/voa/1040182.md)
@@ -594,10 +600,4 @@
 5-29 [布林肯：美国和印度联手抗疫](/articles/voa/1040476.md)
 
 5-29 [承诺多兑现少，中东欧国家对中国不买账](/articles/voa/1040477.md)
-
-5-29 [美国人在阵亡将士纪念日周末增加出行](/articles/voa/1040478.md)
-
-5-29 [台湾驻美代表萧美琴在美台高层会谈中表达对新冠疫苗急迫需求](/articles/voa/1040479.md)
-
-5-29 [美参院两党分歧难弥 大型抗中法案延至六月表决](/articles/voa/1040480.md)
 
