--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+6-12 [俄罗斯总统普京称俄美关系处于近年来的最低点](/articles/reuters/1036931.md)
+
+6-12 [G7领导人将支持设定15%全球最低企业税率的提议--美国家安全顾问](/articles/reuters/1036932.md)
+
+6-12 [焦点：美众议院议员提交多项反垄断议案 意在控制科技巨头的市场力量](/articles/reuters/1036933.md)
+
+6-12 [焦点：G7领导人就保持财政刺激达成共识 认为通胀上升将是暂时的--消息](/articles/reuters/1036934.md)
+
 6-12 [焦点：中国称武汉实验室泄漏新冠病毒的故事“荒谬” 布林肯呼吁提高透明度](/articles/reuters/1036935.md)
 
 6-12 [美国贸易代表戴琪下周将访问英国 与英国贸易大臣特拉斯举行会谈](/articles/reuters/1036936.md)
@@ -592,12 +600,4 @@
 6-5 [中国进出口行逾五年来首发境内美元债 三年期发行利率0.70%](/articles/reuters/1037229.md)
 
 6-5 [美股收高 美国就业报告不及预期令通胀担忧缓解](/articles/reuters/1037230.md)
-
-6-5 [油价触及两年高位 受助于OPEC+维持政策不变和需求希望](/articles/reuters/1037231.md)
-
-6-5 [金价从逾两周低位反弹 美国非农就业岗位增幅略逊预期](/articles/reuters/1037232.md)
-
-6-4 [境外机构5月增持中国国债258亿元环比降约五成 期末国债托管余额达2.12万亿](/articles/reuters/1037233.md)
-
-6-4 [独家：拜登的电动车产业计划包含推动电池回收](/articles/reuters/1037234.md)
 
