--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-12 [美俄高峰会在即 蒲亭：盼拜登不像川普那般冲动 – 法国国际广播电台 - RFI](/articles/rfi/1028146.md)
+
 6-12 [周庭出狱 未算自由](/articles/rfi/1028147.md)
 
 6-12 [《执屋》不获评级惟撤映 香港以国安审查影片后首例 业界忧政治审查易过度](/articles/rfi/1028148.md)
@@ -598,6 +600,4 @@
 6-7 [网攻威胁与日俱增 美国不排除军事选项因应 – 法国国际广播电台 - RFI](/articles/rfi/1028444.md)
 
 6-7 [法国开庭审理2017年香榭丽舍大道恐怖杀人案 此选前袭击案仍敏感引全国关注](/articles/rfi/1028445.md)
-
-6-7 [吸引外资 法国连续排行欧洲首位](/articles/rfi/1028446.md)
 
