--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-12 [欢迎来到通讯“黑洞”：德国](/articles/dw/1041981.md)
+
+6-12 [疫情下的安全度假方式](/articles/dw/1041982.md)
+
 6-11 [欧盟启动疫苗证书后中国游客能来了？ 并没有！](/articles/dw/1041983.md)
 
 6-11 [美国通胀破五 美联储压力增大](/articles/dw/1041984.md)
@@ -596,8 +600,4 @@
 5-26 [美领头推新冠溯源再调查  世卫专家表示支持](/articles/dw/1042279.md)
 
 5-26 [未料欧盟会制裁中国 王毅捍卫投资协定](/articles/dw/1042280.md)
-
-5-26 [将台湾称为“国家”  《速9》主演中文道歉](/articles/dw/1042281.md)
-
-5-25 [新西兰外长：中国“风暴”到来只是时间问题](/articles/dw/1042282.md)
 
