--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-12 [日本诺贝尔化学奖得主根岸英一过世 终年85岁 – 法国国际广播电台 - RFI](/articles/rfi/1028140.md)
+
+6-12 [林书豪推特宣布 将重返CBA北京首钢 – 法国国际广播电台 - RFI](/articles/rfi/1028141.md)
+
 6-12 [法国国防部：涉嫌杀害法广记者的北非基地组织头目在马里被消灭](/articles/rfi/1028142.md)
 
 6-12 [欧国杯开战 义大利3比0大胜土耳其 – 法国国际广播电台 - RFI](/articles/rfi/1028143.md)
@@ -596,8 +600,4 @@
 6-7 [世贸组织女老板这样公开谈论她的“不可能胜”的使命](/articles/rfi/1028438.md)
 
 6-7 [布林肯：将查清新冠病毒来源 向中国追究责任](/articles/rfi/1028439.md)
-
-6-7 [人权专家在伦敦开设“维吾尔法庭” - 法国报纸摘要](/articles/rfi/1028440.md)
-
-6-7 [美国华人纪念六四32周年两大亮点 - 美国专栏](/articles/rfi/1028441.md)
 
