--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-12 [香港民主活动人士周庭获释出狱](/articles/voa/1040176.md)
+
+6-12 [美国将在G7峰会上提出“一带一路”替代方案](/articles/voa/1040177.md)
+
 6-12 [美国科学家看中国火星车驶入新太空竞赛](/articles/voa/1040178.md)
 
 6-12 [美参院两党推动外交抵制北京冬奥 将进一步施压美企](/articles/voa/1040179.md)
@@ -596,8 +600,4 @@
 5-29 [香港“六四”烛光纪念活动组织者上诉失败](/articles/voa/1040474.md)
 
 5-29 [菲律宾抗议中国在南中国海的“非法”存在](/articles/voa/1040475.md)
-
-5-29 [布林肯：美国和印度联手抗疫](/articles/voa/1040476.md)
-
-5-29 [承诺多兑现少，中东欧国家对中国不买账](/articles/voa/1040477.md)
 
