--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-12 [在法国，已接种至少一针疫苗的人马上要超3千万](/articles/rfi/1028138.md)
+
+6-12 [G7峰会第二天：聚焦冠状病毒大流行的教训和外交挑战](/articles/rfi/1028139.md)
+
 6-12 [日本诺贝尔化学奖得主根岸英一过世 终年85岁 – 法国国际广播电台 - RFI](/articles/rfi/1028140.md)
 
 6-12 [林书豪推特宣布 将重返CBA北京首钢 – 法国国际广播电台 - RFI](/articles/rfi/1028141.md)
@@ -596,8 +600,4 @@
 6-7 [匈高官：复旦建校计划为时尚早 2023年由布市公投决定](/articles/rfi/1028436.md)
 
 6-7 [美国3名跨党派议员乘军机闪电访台 北京今天低调抗议](/articles/rfi/1028437.md)
-
-6-7 [世贸组织女老板这样公开谈论她的“不可能胜”的使命](/articles/rfi/1028438.md)
-
-6-7 [布林肯：将查清新冠病毒来源 向中国追究责任](/articles/rfi/1028439.md)
 
