--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,15 +7,21 @@
 
 6-12 [【CDTV】小学生建党百年知识问答](/articles/cdt/381482.md)
 
+6-12 [【CDT敏感词周报】第二十八期：小红书被封、本降专、献忠学](/articles/cdt/381484.md)
+
 6-12 [安猪 | 一只猪的生活意见：与其拱白菜，不如特立独行](/articles/cdt/381489.md)
 
 6-12 [反向阅读 | “负面人物，有争议人物，坚决停用”](/articles/cdt/381491.md)
+
+6-12 [【墙的妙用】美国媒体BuzzFeed因新疆报道获普利策奖，墙内是怎么报道的？](/articles/cdt/381492.md)
 
 6-12 [学问批判｜“非升即走”能承担这不是由它造成的生命之重么？](/articles/cdt/381498.md)
 
 6-12 [书单君｜讲真，“土猪”越火，我越佩服罗翔](/articles/cdt/381499.md)
 
 6-12 [骚客文艺｜头骨厚的人，看谁都像汉奸](/articles/cdt/381500.md)
+
+6-12 [【CDT周报】第二十一期：昨日挺港警打废青不论孰是孰非，今朝争学历挨铁拳勿忘爱国爱党](/articles/cdt/381503.md)
 
 6-11 [立场新闻 | “生为维吾尔人就是罪” 一个新疆再教育营受害者的证词](/articles/cdt/381505.md)
 
@@ -594,10 +600,4 @@
 5-9 [全现在 | 把100公斤脏话铺满一座山，他们用行动证明网暴的可怕](/articles/cdt/382843.md)
 
 5-8 [恰妮斯虫 | 对不起，换酒书店要提前说再见啦](/articles/cdt/382845.md)
-
-5-8 [金屏媒｜女子被强奸后报警，却遭遇比被强奸更大的身心伤害](/articles/cdt/382846.md)
-
-5-8 [每日一语（测试） 5.8](/articles/cdt/382848.md)
-
-5-8 [谷雨 | 非离婚不可的人](/articles/cdt/382849.md)
 
