--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-12 [中国通过反外国制裁法 美在华企夹缝中求生存](/articles/voa/1040175.md)
+
 6-12 [香港民主活动人士周庭获释出狱](/articles/voa/1040176.md)
 
 6-12 [美国将在G7峰会上提出“一带一路”替代方案](/articles/voa/1040177.md)
@@ -598,6 +600,4 @@
 5-29 [新闻自由组织呼吁联合国为黎智英获释采取行动](/articles/voa/1040473.md)
 
 5-29 [香港“六四”烛光纪念活动组织者上诉失败](/articles/voa/1040474.md)
-
-5-29 [菲律宾抗议中国在南中国海的“非法”存在](/articles/voa/1040475.md)
 
