--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-12 [中国神秘科技公司被拜登放行遭美国智库质疑](/articles/voa/1040173.md)
+
 6-12 [伊朗与世界大国周六举行新一轮谈判，讨论恢复2015年伊核协议](/articles/voa/1040174.md)
 
 6-12 [中国通过反外国制裁法 美在华企夹缝中求生存](/articles/voa/1040175.md)
@@ -598,6 +600,4 @@
 5-29 [美国会议员提法案 拟将“台北驻美代表处”更名为“台湾驻美代表处”](/articles/voa/1040471.md)
 
 5-29 [轰-20呼之欲出？中国兵器杂志刊登想象图引热议](/articles/voa/1040472.md)
-
-5-29 [新闻自由组织呼吁联合国为黎智英获释采取行动](/articles/voa/1040473.md)
 
