--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-13 [阿富汗首都爆炸炸死七人](/articles/voa/1040170.md)
+
 6-13 [七国集团似乎在对抗中国的策略上存在分歧](/articles/voa/1040171.md)
 
 6-13 [美俄首脑下周会晤日内瓦, “职业男”与“杀手”期待见面](/articles/voa/1040172.md)
@@ -598,6 +600,4 @@
 5-30 [阿富汗炸弹攻击造成3人死亡，15人受伤](/articles/voa/1040468.md)
 
 5-30 [美国决定不重返《开放天空条约》](/articles/voa/1040469.md)
-
-5-29 [中国一些地方政府要求员工不要拥有特斯拉汽车](/articles/voa/1040470.md)
 
