--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+6-13 [周庭出狱 香港紧张](/articles/rfi/1028122.md)
+
+6-13 [G7寻求团结一致共同应对中国挑战及疫情大流行 默克尔：&quot;不能坐视中国包揽一切&quot;](/articles/rfi/1028123.md)
+
+6-13 [冯德莱恩：欧盟目标是年底前出口7亿剂疫苗](/articles/rfi/1028124.md)
+
+6-13 [法国接种首剂疫苗人数突破象征性的3000万大关](/articles/rfi/1028125.md)
+
 6-13 [防潜艇被监控 澳洲终止与中国合作研究海温计划](/articles/rfi/1028126.md)
 
 6-13 [卡雷茨科娃法网女单封后 捷克40年来第一人 – 法国国际广播电台 - RFI](/articles/rfi/1028127.md)
@@ -592,12 +600,4 @@
 6-7 [俄罗斯总统普京签署法律 正式宣布俄罗斯退出《开放天空条约》](/articles/rfi/1028420.md)
 
 6-7 [俄国总统蒲亭签署法案 正式退出开放天空条约 – 法国国际广播电台 - RFI](/articles/rfi/1028421.md)
-
-6-7 [COVID-19全球确诊逾1亿7320万例 超过373万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1028422.md)
-
-6-7 [印度变异病毒来袭 斐济单日确诊创新高 – 法国国际广播电台 - RFI](/articles/rfi/1028423.md)
-
-6-7 [马里宪政危机及其地缘政治起因 - 聚焦非洲](/articles/rfi/1028424.md)
-
-6-7 [共产党在香港或走出地下 活动公开化](/articles/rfi/1028425.md)
 
