--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-13 [丹麦球员在欧洲杯比赛中倒地，比赛一度中断](/articles/voa/1040169.md)
+
 6-13 [阿富汗首都爆炸炸死七人](/articles/voa/1040170.md)
 
 6-13 [七国集团似乎在对抗中国的策略上存在分歧](/articles/voa/1040171.md)
@@ -598,6 +600,4 @@
 5-30 [拜登抨击德州进一步限制投票权的整合议案](/articles/voa/1040467.md)
 
 5-30 [阿富汗炸弹攻击造成3人死亡，15人受伤](/articles/voa/1040468.md)
-
-5-30 [美国决定不重返《开放天空条约》](/articles/voa/1040469.md)
 
