--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-13 [进观传媒 | 公号《新岭南观察》，10万+的假国际新闻段子手](/articles/cdt/381459.md)
+
 6-12 [做书 |《觉醒年代》获白玉兰奖，文学史教材却因提及周作人被停用](/articles/cdt/381467.md)
 
 6-12 [【CDTV】小学生建党百年知识问答](/articles/cdt/381482.md)
@@ -598,6 +600,4 @@
 5-9 [【CDTV】无名的小雷：被中国警察抓的那一次，跟大家分享一下故事](/articles/cdt/382824.md)
 
 5-9 [看完烧毁 | 胡锡进的困境](/articles/cdt/382826.md)
-
-5-9 [Matters | 港人流亡日记：永不消散的迷茫](/articles/cdt/382841.md)
 
