--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-13 [叙北反抗军掌控城市阿夫林遭连番炮击 至少18死23伤 – 法国国际广播电台 - RFI](/articles/rfi/1028118.md)
+
+6-13 [与贝佐斯同行飞往太空旅行 代价2800万美元 – 法国国际广播电台 - RFI](/articles/rfi/1028119.md)
+
+6-13 [法国 晚会复苏 专家隐忧 - 要闻分析](/articles/rfi/1028120.md)
+
 6-13 [拜登倡导“全球基础建设”计划抗衡中国“一带一路”](/articles/rfi/1028121.md)
 
 6-13 [周庭出狱 香港紧张](/articles/rfi/1028122.md)
@@ -594,10 +600,4 @@
 6-7 [法网/美17岁小将高夫晋8强 大满贯赛15年来最年轻 – 法国国际广播电台 - RFI](/articles/rfi/1028416.md)
 
 6-7 [习近平促塑造中国“可爱”形象 战狼或披更精致的皮？](/articles/rfi/1028417.md)
-
-6-7 [日本据报将审查孔子学院 年底前校方需提供资金等信息](/articles/rfi/1028418.md)
-
-6-7 [博雷利：欧盟须被视为印太地区的政治和安全行为体](/articles/rfi/1028419.md)
-
-6-7 [俄罗斯总统普京签署法律 正式宣布俄罗斯退出《开放天空条约》](/articles/rfi/1028420.md)
 
