--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-13 [中产生活观察 | 过去重新变得危险](/articles/cdt/381457.md)
+
 6-13 [进观传媒 | 公号《新岭南观察》，10万+的假国际新闻段子手](/articles/cdt/381459.md)
 
 6-13 [过桥土豆 | “张献忠”梗的流行](/articles/cdt/381461.md)
@@ -598,6 +600,4 @@
 5-9 [回声 | 把辱骂自己的言论挂满山坡的时候，我们在想些什么？](/articles/cdt/382811.md)
 
 5-9 [尖椒部落 | 今天，我想和你谈谈不做母亲的自由](/articles/cdt/382819.md)
-
-5-9 [【CDTV】无名的小雷：被中国警察抓的那一次，跟大家分享一下故事](/articles/cdt/382824.md)
 
