--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-13 [巴西总统出席集会不配合防疫 挨罚2800元 – 法国国际广播电台 - RFI](/articles/rfi/1028111.md)
+
+6-13 [夏天还没到 美西88%地区已处干旱状态 – 法国国际广播电台 - RFI](/articles/rfi/1028112.md)
+
+6-13 [象牙海岸圣战攻击 3名军警遭炸死 – 法国国际广播电台 - RFI](/articles/rfi/1028113.md)
+
 6-13 [快艇132-106胜出 爵士听牌再等等 – 法国国际广播电台 - RFI](/articles/rfi/1028114.md)
 
 6-13 [乘客扬言让飞机「掉下来」 达美飞亚特兰大班机急转降 – 法国国际广播电台 - RFI](/articles/rfi/1028115.md)
@@ -594,10 +600,4 @@
 6-8 [印度变异病毒来袭 斐济单日确诊创新高](/articles/rfi/1028409.md)
 
 6-8 [中国与东盟在重庆开会  推进南海行为准则磋商](/articles/rfi/1028410.md)
-
-6-8 [国际环境日谈能源企业的拐点 - 环境与发展](/articles/rfi/1028411.md)
-
-6-8 [中国防火墙出口非洲 尼日利亚向北京取经](/articles/rfi/1028412.md)
-
-6-8 [欧股3大指数小幅涨跌 – 法国国际广播电台 - RFI](/articles/rfi/1028413.md)
 
