--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-13 [陈时中承认复星医药手握BNT疫苗代理权](/articles/dw/1041962.md)
+
 6-13 [赚“翻”了！塞浦路斯违章签发数千欧盟护照](/articles/dw/1041963.md)
 
 6-13 [新冠孤儿：疫情中失去父母的印度孩子](/articles/dw/1041964.md)
@@ -598,6 +600,4 @@
 5-27 [因应中国竞争 美参院连推法案](/articles/dw/1042260.md)
 
 5-26 [事实核查:白俄罗斯迫降客机是否史无前例?](/articles/dw/1042261.md)
-
-5-26 [新疆人权：德国国际法专家质疑种族灭绝](/articles/dw/1042262.md)
 
