--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-13 [世卫总干事敦促中国配合新冠病毒起源调查](/articles/voa/1040166.md)
+
 6-13 [G-7领导人誓言不再重蹈覆辙](/articles/voa/1040167.md)
 
 6-13 [德州奥斯汀枪击打伤13人](/articles/voa/1040168.md)
@@ -598,6 +600,4 @@
 5-30 [拜登将会普京 美国能否将俄罗斯从中国身边剥离？](/articles/voa/1040464.md)
 
 5-30 [越南发现新冠病毒混合新变体](/articles/voa/1040465.md)
-
-5-30 [法国新冠病毒感染住院人数减少](/articles/voa/1040466.md)
 
