--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-13 [谈完中国谈气候 西方七国要撒钱](/articles/dw/1041960.md)
+
+6-13 [新冠疫情中的教训：减小对中国的过度依赖](/articles/dw/1041961.md)
+
 6-13 [陈时中承认复星医药手握BNT疫苗代理权](/articles/dw/1041962.md)
 
 6-13 [赚“翻”了！塞浦路斯违章签发数千欧盟护照](/articles/dw/1041963.md)
@@ -596,8 +600,4 @@
 5-27 [美中贸易谈判代表首通话 不同调?](/articles/dw/1042258.md)
 
 5-27 [动物接触还是实验室泄露? 拜登下令限期提新报告](/articles/dw/1042259.md)
-
-5-27 [因应中国竞争 美参院连推法案](/articles/dw/1042260.md)
-
-5-26 [事实核查:白俄罗斯迫降客机是否史无前例?](/articles/dw/1042261.md)
 
