--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,20 @@
 法广
 ------
 
+6-13 [土库曼总统:欠中国的债我们还清了](/articles/rfi/1028093.md)
+
+6-13 [驳「英国版福斯新闻」说 GB新闻台正式开播 – 法国国际广播电台 - RFI](/articles/rfi/1028094.md)
+
+6-13 [七国集团公报提港疆台问题 呼吁由世卫召集第二阶段病毒溯源](/articles/rfi/1028095.md)
+
+6-13 [莫里森：已准备好与中国坐在谈判桌前 美英是澳洲最亲密朋友](/articles/rfi/1028096.md)
+
+6-13 [欧盟官员吁  避免为60岁以上者接种AZ疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1028097.md)
+
+6-13 [G7公报谴责中国侵犯新疆、香港人权 – 法国国际广播电台 - RFI](/articles/rfi/1028098.md)
+
+6-13 [G7捐助疫苗计划：软实力和障眼迷惑 - 法国报纸摘要](/articles/rfi/1028099.md)
+
 6-13 [英国将启动5亿英镑基金 保护世界海洋生态系统](/articles/rfi/1028100.md)
 
 6-13 [假教授飞黄腾达 真学者走投无路 - 微言微语](/articles/rfi/1028101.md)
@@ -586,18 +600,4 @@
 6-8 [NASA宣布新金星探险计画 – 法国国际广播电台 - RFI](/articles/rfi/1028391.md)
 
 6-8 [美最大输油管商遇骇案 司法部：已追回逾半赎金 – 法国国际广播电台 - RFI](/articles/rfi/1028392.md)
-
-6-8 [中共浮出香港水面 评论指要港人接受中共拥港「话事权」 短期仍靠土共代言](/articles/rfi/1028393.md)
-
-6-8 [三度驻华 戴伟绅7月出任英国驻港总领事](/articles/rfi/1028394.md)
-
-6-8 [哈登缺阵篮网照赢 季后赛次轮对公鹿2连胜 – 法国国际广播电台 - RFI](/articles/rfi/1028395.md)
-
-6-8 [尼克2013年后重返季后赛 席柏杜获选年度最佳教练 – 法国国际广播电台 - RFI](/articles/rfi/1028396.md)
-
-6-8 [法网 乔科维奇后来居上顺利晋级 – 法国国际广播电台 - RFI](/articles/rfi/1028397.md)
-
-6-8 [纳达尔宝刀未老 法网晋8强 – 法国国际广播电台 - RFI](/articles/rfi/1028398.md)
-
-6-8 [剑指欧美：人大料后日通过反外国制裁法 学者料订对等反制原则](/articles/rfi/1028399.md)
 
