--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-13 [对缅甸军政府示好，中国的盘算与西方的踌躇](/articles/voa/1040163.md)
+
 6-13 [七国集团峰会进入最后一天 中国称世界不由少数国家操纵](/articles/voa/1040164.md)
 
 6-13 [香港警方在 2019 年民主示威活动周年纪念日逮捕了至少三名抗议者](/articles/voa/1040165.md)
@@ -598,6 +600,4 @@
 5-30 [中国智库：中国可以在关税豁免上找到共同点](/articles/voa/1040461.md)
 
 5-30 [广州本土疫情导致部分居民区限制出行](/articles/voa/1040462.md)
-
-5-30 [《老友记》重聚特辑在中国被审查，客串歌手因言糟剪](/articles/voa/1040463.md)
 
