--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-13 [七国集团峰会闭幕 声明猛批中国](/articles/dw/1041956.md)
+
+6-13 [香港中联办：结束一党专政会威胁香港繁荣](/articles/dw/1041957.md)
+
+6-13 [墙外文摘：驻华大使将是谁，中美两国如何斗？](/articles/dw/1041958.md)
+
 6-13 [“直到没有难民再想来丹麦申请避难”](/articles/dw/1041959.md)
 
 6-13 [谈完中国谈气候 西方七国要撒钱](/articles/dw/1041960.md)
@@ -594,10 +600,4 @@
 5-27 [台灣少子化有解嗎？](/articles/dw/1042254.md)
 
 5-27 [陈时中首次披露洽购德国疫苗破局细节](/articles/dw/1042255.md)
-
-5-27 [昔日顾问的逆袭：卡明斯猛爆约翰逊“黑料”](/articles/dw/1042256.md)
-
-5-27 [俄罗斯指认3个德国NGO “不受欢迎”](/articles/dw/1042257.md)
-
-5-27 [美中贸易谈判代表首通话 不同调?](/articles/dw/1042258.md)
 
