--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-14 [内塔尼亚胡：我将很快回来](/articles/rfi/1028089.md)
+
+6-14 [莫斯科奖励疫苗接种 市民施打可抽汽车 – 法国国际广播电台 - RFI](/articles/rfi/1028090.md)
+
 6-14 [美国纽约也用免费Covid疫苗吸引游客](/articles/rfi/1028091.md)
 
 6-13 [七国集团峰会即将结束 公报内容隐藏诸多奥秘 - 要闻解说](/articles/rfi/1028092.md)
@@ -596,8 +600,4 @@
 6-8 [抵制北京冬奥会？美国酝酿盟友协商](/articles/rfi/1028387.md)
 
 6-8 [巴西疫苗打太慢防疫措施不足 第3波疫情恐来袭 – 法国国际广播电台 - RFI](/articles/rfi/1028388.md)
-
-6-8 [保罗21分11助攻 太阳逆转金块夺系列赛首战胜利 – 法国国际广播电台 - RFI](/articles/rfi/1028389.md)
-
-6-8 [暖化趋势难挡 大气二氧化碳浓度创新高 – 法国国际广播电台 - RFI](/articles/rfi/1028390.md)
 
