--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-14 [Covid-19 : 巴西总统游行不戴口罩被罚](/articles/rfi/1028082.md)
+
+6-14 [乔科维奇后来居上力克西西帕斯 法网夺冠 – 法国国际广播电台 - RFI](/articles/rfi/1028083.md)
+
+6-14 [流亡藏人新政府上任 与北京对话希望依然渺茫 - 公民论坛](/articles/rfi/1028084.md)
+
+6-14 [香港国安法下的第一个六四纪念日 - 特别节目](/articles/rfi/1028085.md)
+
+6-14 [宗教改革的斗士马丁·路德第四节 人凭什么得救？ - 欧洲思想文化长廊](/articles/rfi/1028086.md)
+
 6-14 [乔科维奇苦战5盘法网夺冠 – 法国国际广播电台 - RFI](/articles/rfi/1028087.md)
 
 6-14 [拜登白宫“印太沙皇”眼中的地区形势及未来（二） - 印太纵览](/articles/rfi/1028088.md)
@@ -590,14 +600,4 @@
 6-8 [美国追回了不少已付骇客的赎金：63.7个比特币](/articles/rfi/1028380.md)
 
 6-8 [台湾8日新增219例本土病例](/articles/rfi/1028381.md)
-
-6-8 [传上海复旦出血案 教师持刀杀害学院党委书记](/articles/rfi/1028382.md)
-
-6-8 [欧洲理事会主席为欧中投资协议辩护](/articles/rfi/1028383.md)
-
-6-8 [北约挺拜登 指中国“不认同我们的价值观”](/articles/rfi/1028384.md)
-
-6-8 [贺锦丽访瓜地马拉 要移民别再赴美 – 法国国际广播电台 - RFI](/articles/rfi/1028385.md)
-
-6-8 [美国称将启动对台贸易谈判 签全面贸易协定与否引聚焦](/articles/rfi/1028386.md)
 
