--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-14 [七国集团以‘重建更好世界’接招中国 ‘一带一路’](/articles/voa/1040161.md)
+
 6-14 [七国集团峰会发表公报涉及多项中国议题](/articles/voa/1040162.md)
 
 6-13 [对缅甸军政府示好，中国的盘算与西方的踌躇](/articles/voa/1040163.md)
@@ -598,6 +600,4 @@
 5-30 [世维会发表声明，强烈谴责中国当局判处世维会主席胞弟无期徒刑](/articles/voa/1040459.md)
 
 5-30 [专访历史学者周杰荣谈六四屠杀新研究（1）](/articles/voa/1040460.md)
-
-5-30 [中国智库：中国可以在关税豁免上找到共同点](/articles/voa/1040461.md)
 
