--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-14 [法海军参谋长：法国在印太地区有连贯的政治抱负 - 印太纵览](/articles/rfi/1028081.md)
+
 6-14 [Covid-19 : 巴西总统游行不戴口罩被罚](/articles/rfi/1028082.md)
 
 6-14 [乔科维奇后来居上力克西西帕斯 法网夺冠 – 法国国际广播电台 - RFI](/articles/rfi/1028083.md)
@@ -598,6 +600,4 @@
 6-8 [路透社：拜登尚未能扭转美国形象下滑 中国声誉有提升](/articles/rfi/1028379.md)
 
 6-8 [美国追回了不少已付骇客的赎金：63.7个比特币](/articles/rfi/1028380.md)
-
-6-8 [台湾8日新增219例本土病例](/articles/rfi/1028381.md)
 
