--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-14 [拜登：“中国必须开始在国际人权准则和透明度方面采取更负责任的行动。”](/articles/voa/1040160.md)
+
 6-14 [七国集团以‘重建更好世界’接招中国 ‘一带一路’](/articles/voa/1040161.md)
 
 6-14 [七国集团峰会发表公报涉及多项中国议题](/articles/voa/1040162.md)
@@ -598,6 +600,4 @@
 5-31 [杨恒均强调清白，担心澳中关系恶化影响判决](/articles/voa/1040458.md)
 
 5-30 [世维会发表声明，强烈谴责中国当局判处世维会主席胞弟无期徒刑](/articles/voa/1040459.md)
-
-5-30 [专访历史学者周杰荣谈六四屠杀新研究（1）](/articles/voa/1040460.md)
 
