--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-14 [七月醒觉大会纪念612港人觉醒年](/articles/rfa/1045331.md)
+
 6-12 [中国野象“北漂” 很萌？   背后原因可悲](/articles/rfa/1045332.md)
 
 6-12 [马拉松事故处理27人    县委书记坠楼身亡](/articles/rfa/1045333.md)
@@ -598,6 +600,4 @@
 5-11 [官称少数民族人口增长远高于汉族    与地方数据背道而驰](/articles/rfa/1045629.md)
 
 5-11 [蔡英文二度受邀哥本哈根峰会演说 中国批“台独头目”违反一中](/articles/rfa/1045630.md)
-
-5-11 [台湾叩关世卫大会再次受阻 邦交国洪都拉斯向中国买疫苗](/articles/rfa/1045631.md)
 
