--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-14 [NBA篮网厄文脚伤退场 公鹿拿下季后赛次轮第4战 – 法国国际广播电台 - RFI](/articles/rfi/1028066.md)
+
+6-14 [公鹿抓破篮网 季后赛次轮扳成2平 – 法国国际广播电台 - RFI](/articles/rfi/1028067.md)
+
+6-14 [公鹿对篮网扳成平手 字母哥：全队准备再赢两场 – 法国国际广播电台 - RFI](/articles/rfi/1028068.md)
+
 6-14 [复旦这所大学 真是很魔幻？](/articles/rfi/1028069.md)
 
 6-14 [班奈特将任以色列总理  拜登道贺 – 法国国际广播电台 - RFI](/articles/rfi/1028070.md)
@@ -594,10 +600,4 @@
 6-8 [法国专家谈中国在中东欧的影响力及前景趋势 - 国际纵横](/articles/rfi/1028364.md)
 
 6-8 [关于Covid-19病毒的七个关键疑问](/articles/rfi/1028365.md)
-
-6-8 [凯蒂佩芮、贝克汉等将近30位名人呼吁G7 分享疫苗给较贫穷国家 – 法国国际广播电台 - RFI](/articles/rfi/1028366.md)
-
-6-8 [斯托尔滕贝格：中俄靠拢对北约构成新的危险](/articles/rfi/1028367.md)
-
-6-8 [多家国际媒体网站突然停摆 – 法国国际广播电台 - RFI](/articles/rfi/1028368.md)
 
