--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-14 [尼加拉瓜政治危机加深 又逮捕多名异议人士 – 法国国际广播电台 - RFI](/articles/rfi/1028064.md)
+
 6-14 [叶门叛军炸弹无人机坠毁沙国校园 – 法国国际广播电台 - RFI](/articles/rfi/1028065.md)
 
 6-14 [NBA篮网厄文脚伤退场 公鹿拿下季后赛次轮第4战 – 法国国际广播电台 - RFI](/articles/rfi/1028066.md)
@@ -598,6 +600,4 @@
 6-8 [加拿大舆论重提终止孟晚舟引渡 - 北美来鸿](/articles/rfi/1028362.md)
 
 6-8 [米日阿依·艾尔肯 : 中国黑暗集中营中陨落的星辰 - 法国报纸摘要](/articles/rfi/1028363.md)
-
-6-8 [法国专家谈中国在中东欧的影响力及前景趋势 - 国际纵横](/articles/rfi/1028364.md)
 
