--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-14 [以色列群众期待改变 乐见尼坦雅胡12年执政终结 – 法国国际广播电台 - RFI](/articles/rfi/1028062.md)
+
+6-14 [保罗布克合拿71分 太阳横扫金块晋西区决赛 – 法国国际广播电台 - RFI](/articles/rfi/1028063.md)
+
 6-14 [尼加拉瓜政治危机加深 又逮捕多名异议人士 – 法国国际广播电台 - RFI](/articles/rfi/1028064.md)
 
 6-14 [叶门叛军炸弹无人机坠毁沙国校园 – 法国国际广播电台 - RFI](/articles/rfi/1028065.md)
@@ -596,8 +600,4 @@
 6-8 [新冠疫情升温 越南吁公众捐款购买疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1028360.md)
 
 6-8 [七强峰会通过跨国集团税务公约 G20呢？ - 今日经济](/articles/rfi/1028361.md)
-
-6-8 [加拿大舆论重提终止孟晚舟引渡 - 北美来鸿](/articles/rfi/1028362.md)
-
-6-8 [米日阿依·艾尔肯 : 中国黑暗集中营中陨落的星辰 - 法国报纸摘要](/articles/rfi/1028363.md)
 
