--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-14 [休士顿医护控院方强迫接种疫苗 法官驳回 – 法国国际广播电台 - RFI](/articles/rfi/1028055.md)
+
+6-14 [尼坦雅胡时代告终 班奈特成以色列新总理 – 法国国际广播电台 - RFI](/articles/rfi/1028056.md)
+
+6-14 [教育部建议香港赋普通话和简体字法律地位 港局长只强调学习有利发展](/articles/rfi/1028057.md)
+
+6-14 [港澳居民申请移居台湾 须申报曾否宣誓效忠政府](/articles/rfi/1028058.md)
+
+6-14 [与女王茶叙 拜登盛赞伊丽莎白二世亲切 – 法国国际广播电台 - RFI](/articles/rfi/1028059.md)
+
 6-14 [日股随美股涨势收高 投资人关注联准会会议 – 法国国际广播电台 - RFI](/articles/rfi/1028060.md)
 
 6-14 [澳洲干旱水灾后又碰上鼠患 老翁叹：一生见过最糟糕3年 – 法国国际广播电台 - RFI](/articles/rfi/1028061.md)
@@ -590,14 +600,4 @@
 6-8 [跨国合作加密手机卧底计画收网 全球数百人被捕 – 法国国际广播电台 - RFI](/articles/rfi/1028353.md)
 
 6-8 [跨国卧底行动收网 全球800多人被捕逾8吨毒品被查扣 – 法国国际广播电台 - RFI](/articles/rfi/1028354.md)
-
-6-8 [全球COVID-19确诊逾1亿7353万例 近374万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1028355.md)
-
-6-8 [拜登欧洲行：安抚盟友 应对普京 - 要闻解说](/articles/rfi/1028356.md)
-
-6-8 [法国明天扩大解禁 法兰西球场今晚球赛邀5000医护消防大学生临场观看先庆祝](/articles/rfi/1028357.md)
-
-6-8 [马克龙寻接地气 却遭人扇耳光](/articles/rfi/1028358.md)
-
-6-8 [印度雨季雷击造成27死 一架飞机遇乱流酿8伤4送医 – 法国国际广播电台 - RFI](/articles/rfi/1028359.md)
 
