--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-14 [【立此存照】莫文蔚因穿杜嘉班纳“辱华” 胡锡进呼吁舆论克制](/articles/cdt/381433.md)
+
 6-14 [历史在加速｜葛剑雄回应网友：我只是把一层纸捅破了，不知为什么有些人会大惊小怪](/articles/cdt/381437.md)
 
 6-14 [维舟｜微信公众号被封号了15天](/articles/cdt/381438.md)
@@ -598,6 +600,4 @@
 5-10 [【网络民议】深圳打工人每天能坐到末班地铁，背后的原因很暖心？](/articles/cdt/382798.md)
 
 5-10 [【CDT周报】第十六期：十年前过去了，究竟是胡锡进变了，还是这个时代变了？](/articles/cdt/382799.md)
-
-5-10 [北青深一度 | 一条火化信息，牵出8起“盲井”案](/articles/cdt/382805.md)
 
