--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-14 [客座评论：习近平无意降低同美对抗程度](/articles/dw/1041951.md)
+
 6-14 [内塔尼亚胡倒台 以色列新总理贝内特是谁？](/articles/dw/1041952.md)
 
 6-14 [北约秘书长：应制定共同政策抗衡中国](/articles/dw/1041953.md)
@@ -598,6 +600,4 @@
 5-27 [纽时：拜登将任命老牌外交官为驻华大使](/articles/dw/1042249.md)
 
 5-27 [新冠病毒源头之争：德国生物教授继续怀疑实验室假说](/articles/dw/1042250.md)
-
-5-27 [流亡大亨海外爆料 土国政坛人人自危](/articles/dw/1042251.md)
 
