--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-14 [美国与阿尔巴尼亚签署备忘录 要为不使用中国5G设备树立榜样](/articles/voa/1040156.md)
+
 6-14 [七国集团峰会公报首次直接提台湾 台北：得到支持不冒进](/articles/voa/1040157.md)
 
 6-14 [加拿大总理：七国集团领导人同意“更加密切地”协调应对中国提出的挑战。](/articles/voa/1040158.md)
@@ -598,6 +600,4 @@
 5-31 [拜登总统在阵亡将士纪念日周末悼念阵亡将士](/articles/voa/1040454.md)
 
 5-31 [六四纪念馆新展览连结八九民运与香港 设小场区供市民献花悼念](/articles/voa/1040455.md)
-
-5-31 [以色列总理内塔尼亚胡面临着日益增长的让其下台的威胁](/articles/voa/1040456.md)
 
