--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-14 [七国峰会声明批评中国   中国政府低调回应](/articles/rfa/1045328.md)
+
 6-14 [港人申请移居台湾 须申报“是否曾效忠港澳政府”](/articles/rfa/1045329.md)
 
 6-14 [旧金山数百人“如水再聚”  纪念香港612事件两周年](/articles/rfa/1045330.md)
@@ -598,6 +600,4 @@
 5-12 [世卫抨击中国疫苗外交是地缘政治操纵](/articles/rfa/1045626.md)
 
 5-11 [中国争国际话语权  欲与CNN、BBC抗衡](/articles/rfa/1045627.md)
-
-5-11 [王兴吟诗得罪领导层  学者指北京逼民企一起向左转](/articles/rfa/1045628.md)
 
