--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-14 [昂山素季庭审开始 预计将持续到七月底](/articles/voa/1040154.md)
+
 6-14 [学生抗议院校合并遭暴力对待 合并转设凸显教育结构不平衡](/articles/voa/1040155.md)
 
 6-14 [美国与阿尔巴尼亚签署备忘录 要为不使用中国5G设备树立榜样](/articles/voa/1040156.md)
@@ -598,6 +600,4 @@
 5-31 [新冠期间传播欢笑的全球婴儿相片合集](/articles/voa/1040452.md)
 
 5-31 [朝鲜猛烈抨击美国终止限制韩国导弹射程的方针](/articles/voa/1040453.md)
-
-5-31 [拜登总统在阵亡将士纪念日周末悼念阵亡将士](/articles/voa/1040454.md)
 
