--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+6-14 [西方联手抗衡中国“新丝绸之路” - 法国报纸摘要](/articles/rfi/1028039.md)
+
+6-14 [杨洁篪的战狼语言，李阳的霰弹枪 - 美国专栏](/articles/rfi/1028040.md)
+
+6-14 [投资人关注Fed本周会议 亚洲股市多数收高 – 法国国际广播电台 - RFI](/articles/rfi/1028041.md)
+
+6-14 [北约盟友重逢，战略同盟关系尚需调整确定 - 要闻解说](/articles/rfi/1028042.md)
+
 6-14 [台山核电站是否发生核泄漏？美中法三国说法不一](/articles/rfi/1028043.md)
 
 6-14 [北约峰会重聚 但对中国的紧张依然存在](/articles/rfi/1028044.md)
@@ -592,12 +600,4 @@
 6-9 [美国总统拜登将出访英国、比利时](/articles/rfi/1028337.md)
 
 6-9 [加拿大惊爆仇恨犯罪 男子开车辗死穆斯林一家四口](/articles/rfi/1028338.md)
-
-6-9 [力抗中国科技挑战参议院估将通过《美国创新与竞争法案》](/articles/rfi/1028339.md)
-
-6-9 [柬埔寨拚全体免疫  再收百万剂中国疫苗](/articles/rfi/1028340.md)
-
-6-9 [欧盟药管局评估莫德纳疫苗是否可扩及青少年](/articles/rfi/1028341.md)
-
-6-9 [走累了！云南野象群“逛吃”到昆明    就林地睡觉休息](/articles/rfi/1028342.md)
 
