--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-14 [广东核电厂气体外泄恐酿灾，法国合资方向美求援](/articles/voa/1040153.md)
+
 6-14 [昂山素季庭审开始 预计将持续到七月底](/articles/voa/1040154.md)
 
 6-14 [学生抗议院校合并遭暴力对待 合并转设凸显教育结构不平衡](/articles/voa/1040155.md)
@@ -598,6 +600,4 @@
 5-31 [洛杉矶雕塑公园造“中共病毒”雕塑，祭慰六四亡灵](/articles/voa/1040451.md)
 
 5-31 [新冠期间传播欢笑的全球婴儿相片合集](/articles/voa/1040452.md)
-
-5-31 [朝鲜猛烈抨击美国终止限制韩国导弹射程的方针](/articles/voa/1040453.md)
 
