--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+6-14 [上海复星坚称握有BNT疫苗台湾代理权 台：勿干扰采购](/articles/rfa/1045324.md)
+
+6-14 [追寻郭洪伟暴毙真相 律师谢燕益遭强力维稳](/articles/rfa/1045325.md)
+
+6-14 [成都秋雨教会逾十人被传唤  牧师王怡狱中健康堪忧](/articles/rfa/1045326.md)
+
 6-14 [G7公报首次纳入台海和平 鼓励和平解决两岸问题](/articles/rfa/1045327.md)
 
 6-14 [七国峰会声明批评中国   中国政府低调回应](/articles/rfa/1045328.md)
@@ -594,10 +600,4 @@
 5-12 [学者：中俄联合抗美 关系更紧密](/articles/rfa/1045622.md)
 
 5-12 [成都中学生坠亡引众怒   警方打压已成白色恐怖](/articles/rfa/1045623.md)
-
-5-12 [美国进入国家紧急状态？  多个中国媒体出现相关谣言](/articles/rfa/1045624.md)
-
-5-12 [电视剧贩卖生育焦虑   难怪中国人不愿生娃](/articles/rfa/1045625.md)
-
-5-12 [世卫抨击中国疫苗外交是地缘政治操纵](/articles/rfa/1045626.md)
 
