--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-15 [国际科学家促调查科学期刊在有关新冠病毒溯源理论上所起的作用](/articles/voa/1040151.md)
+
+6-15 [六月流放事件80周年，波罗的海三国呼吁不让历史重演](/articles/voa/1040152.md)
+
 6-14 [广东核电厂气体外泄恐酿灾，法国合资方向美求援](/articles/voa/1040153.md)
 
 6-14 [昂山素季庭审开始 预计将持续到七月底](/articles/voa/1040154.md)
@@ -596,8 +600,4 @@
 5-31 [本土新冠病毒传播大增 广州要求所有离境者出示检测阴性证明](/articles/voa/1040449.md)
 
 5-31 [澳新领导人会晤共同应对中国的经济胁迫 阿德恩：我们是一家人](/articles/voa/1040450.md)
-
-5-31 [洛杉矶雕塑公园造“中共病毒”雕塑，祭慰六四亡灵](/articles/voa/1040451.md)
-
-5-31 [新冠期间传播欢笑的全球婴儿相片合集](/articles/voa/1040452.md)
 
