--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-15 [投资人观望 欧股涨跌分歧 – 法国国际广播电台 - RFI](/articles/rfi/1028025.md)
+
 6-15 [拜登访欧忙碌不断 欧洲盟友：美国又回来了 - 国际纵横](/articles/rfi/1028026.md)
 
 6-15 [北约公报：中国野心和行为对国际秩序和联盟安全构成系统性挑战](/articles/rfi/1028027.md)
@@ -598,6 +600,4 @@
 6-9 [拜登与共和党基建方案协商告吹 资金税额乔不拢 – 法国国际广播电台 - RFI](/articles/rfi/1028323.md)
 
 6-9 [日股缺乏消息面引导 日经指数收低 – 法国国际广播电台 - RFI](/articles/rfi/1028324.md)
-
-6-9 [叙利亚媒体：因应以色列侵略 已启动防空系 – 法国国际广播电台 - RFI](/articles/rfi/1028325.md)
 
