--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-15 [菲律宾民答那峨5.7地震 恐造成损害 – 法国国际广播电台 - RFI](/articles/rfi/1028024.md)
+
 6-15 [投资人观望 欧股涨跌分歧 – 法国国际广播电台 - RFI](/articles/rfi/1028025.md)
 
 6-15 [拜登访欧忙碌不断 欧洲盟友：美国又回来了 - 国际纵横](/articles/rfi/1028026.md)
@@ -598,6 +600,4 @@
 6-9 [拜登创新竞争法大撒币维持竞争力 – 法国国际广播电台 - RFI](/articles/rfi/1028322.md)
 
 6-9 [拜登与共和党基建方案协商告吹 资金税额乔不拢 – 法国国际广播电台 - RFI](/articles/rfi/1028323.md)
-
-6-9 [日股缺乏消息面引导 日经指数收低 – 法国国际广播电台 - RFI](/articles/rfi/1028324.md)
 
