--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-15 [北约：中国的行为构成系统性挑战 并破坏全球秩序](/articles/rfa/1045323.md)
+
 6-14 [上海复星坚称握有BNT疫苗台湾代理权 台：勿干扰采购](/articles/rfa/1045324.md)
 
 6-14 [追寻郭洪伟暴毙真相 律师谢燕益遭强力维稳](/articles/rfa/1045325.md)
@@ -598,6 +600,4 @@
 5-12 [中国生育率将降至全球最低 中国学者倡生小孩重赏百万](/articles/rfa/1045621.md)
 
 5-12 [学者：中俄联合抗美 关系更紧密](/articles/rfa/1045622.md)
-
-5-12 [成都中学生坠亡引众怒   警方打压已成白色恐怖](/articles/rfa/1045623.md)
 
