--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,28 @@
 法广
 ------
 
+6-15 [法国电力公司淡化台山核电站发生的事故 - 法国世界报](/articles/rfi/1028010.md)
+
+6-15 [科技股上攻 华尔街那指和标普创新高 – 法国国际广播电台 - RFI](/articles/rfi/1028011.md)
+
+6-15 [“六月遣送”80周年 波罗的海三国总统发表联合演说](/articles/rfi/1028012.md)
+
+6-15 [CNN爆广东台山核电厂有“即时辐射威胁”](/articles/rfi/1028013.md)
+
+6-15 [北约峰会讨论对中战略     匈牙利表态反对冷战](/articles/rfi/1028014.md)
+
+6-15 [北约：  中国及其野心构成“系统性挑战”](/articles/rfi/1028015.md)
+
+6-15 [埃尔多安在布鲁塞尔和法国总统举行会晤](/articles/rfi/1028016.md)
+
+6-15 [亚洲新一波疫情 干扰全球航运和晶片供应链](/articles/rfi/1028017.md)
+
+6-15 [英国防疫解封推迟1个月](/articles/rfi/1028018.md)
+
+6-15 [郭树清提出防范金融风险5项措施 - 今日经济](/articles/rfi/1028019.md)
+
+6-15 [陈破空：七国集团达成前所未有的共识，联手应对中国 - 公民论坛](/articles/rfi/1028020.md)
+
 6-15 [成都秋雨教会牧师王怡狱中情况堪忧不得见家人](/articles/rfi/1028021.md)
 
 6-15 [CNN主播艾曼普罹癌 手术后现接受化疗 – 法国国际广播电台 - RFI](/articles/rfi/1028022.md)
@@ -578,26 +600,4 @@
 6-9 [美国创新和竞争法案势在必行 北京呛把中国当“假想敌” - 要闻解说](/articles/rfi/1028308.md)
 
 6-9 [萨尔瓦通过法案 让比特币成法定货币 – 法国国际广播电台 - RFI](/articles/rfi/1028309.md)
-
-6-9 [捷克女将卡雷茨科娃击败美国17岁小将高夫 闯进法网4强 – 法国国际广播电台 - RFI](/articles/rfi/1028310.md)
-
-6-9 [全球疫情确诊逾1亿7390万例 超过375万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1028311.md)
-
-6-9 [亚股跌多涨少 – 法国国际广播电台 - RFI](/articles/rfi/1028312.md)
-
-6-9 [世界银行：后疫情时代，全球复苏强劲却不均衡 - 今日经济](/articles/rfi/1028313.md)
-
-6-9 [日本向台湾赠送阿斯利康疫苗的负面效应 - 东京专栏](/articles/rfi/1028314.md)
-
-6-9 [派宣传港独单张 未成年学生被控串谋展示煽动刊物 不准保释还柙](/articles/rfi/1028315.md)
-
-6-9 [研究显示新冠疫情爆发前 武汉有近5万头活体野生动物出售](/articles/rfi/1028316.md)
-
-6-9 [港府拟改大律师和会计师获取资格方法 遭质疑谋削专业自主权](/articles/rfi/1028317.md)
-
-6-9 [美超级富豪避税有方 荷包满满实际纳税税率超低 – 法国国际广播电台 - RFI](/articles/rfi/1028318.md)
-
-6-9 [奥运最终资格赛易地举行 澳洲应变不及退赛 – 法国国际广播电台 - RFI](/articles/rfi/1028319.md)
-
-6-9 [加国再增两途助港青移民：当地工作或毕业即可申永久居](/articles/rfi/1028320.md)
 
