--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-15 [北约重申联盟实力，抨击俄罗斯和中国](/articles/voa/1040141.md)
+
 6-15 [澳大利亚将派护卫舰加入英国航母舰队在印太地区的海军演习](/articles/voa/1040142.md)
 
 6-15 [VOA独家:美中央司令部司令说美军在阿富汗的空袭将只聚焦防止对美国和盟友本土的恐怖袭击](/articles/voa/1040143.md)
@@ -598,6 +600,4 @@
 6-1 [疫情迫使中国足协把世界杯预赛赛事主办权移交阿联酋](/articles/voa/1040439.md)
 
 6-1 [台湾三级警戒以来疫情趋缓](/articles/voa/1040440.md)
-
-6-1 [谭德塞呼吁加强疫情应对机制 世卫着手改革](/articles/voa/1040441.md)
 
