--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-15 [兽楼处丨消失的大学](/articles/cdt/381410.md)
+
+6-15 [码头青年 | 18年前的今天，成都饿死了一个三岁女孩](/articles/cdt/381414.md)
+
 6-14 [【异闻观止】直新闻｜陈冰：没有共产党就没有新香港](/articles/cdt/381422.md)
 
 6-14 [【立此存照】莫文蔚因穿杜嘉班纳“辱华” 胡锡进呼吁舆论克制](/articles/cdt/381433.md)
@@ -596,8 +600,4 @@
 5-10 [【麻辣总局】在女仆店听到一首词很像“习近平习近平习近平”的歌](/articles/cdt/382763.md)
 
 5-10 [三联生活周刊｜“宠物盲盒”事件：畸形的消费谋杀](/articles/cdt/382764.md)
-
-5-10 [网络传播杂志｜关于腾讯手机管家等84款App违法违规收集使用个人信息情况的通报](/articles/cdt/382767.md)
-
-5-10 [清醒派｜被强奸之后要不要报警，这事又扯上了男女对立甚至国家分裂](/articles/cdt/382790.md)
 
