--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-15 [面对中国的海上压力，菲律宾再次暂停取消有关美国驻军的协议](/articles/voa/1040138.md)
+
+6-15 [分析：拜登领导七国集团回击中国挑战初获成功](/articles/voa/1040139.md)
+
+6-15 [美国最高法院就哈佛招生纠纷上诉案征求拜登政府意见](/articles/voa/1040140.md)
+
 6-15 [北约重申联盟实力，抨击俄罗斯和中国](/articles/voa/1040141.md)
 
 6-15 [澳大利亚将派护卫舰加入英国航母舰队在印太地区的海军演习](/articles/voa/1040142.md)
@@ -594,10 +600,4 @@
 6-1 [拜登阵亡将士纪念日发表讲话 警告民主在美国和世界都受到威胁](/articles/voa/1040436.md)
 
 6-1 [时事大家谈: 拜登重查毒源响应者众，北京反咬美国孤掌难鸣？](/articles/voa/1040437.md)
-
-6-1 [香港民主派47人案押后7月8日再讯 辩方要求控方交待案情严重性](/articles/voa/1040438.md)
-
-6-1 [疫情迫使中国足协把世界杯预赛赛事主办权移交阿联酋](/articles/voa/1040439.md)
-
-6-1 [台湾三级警戒以来疫情趋缓](/articles/voa/1040440.md)
 
