--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-15 [活动人士称赞英国“人民法庭”就中国涉嫌虐待维吾尔人采取行动](/articles/voa/1040137.md)
+
 6-15 [面对中国的海上压力，菲律宾再次暂停取消有关美国驻军的协议](/articles/voa/1040138.md)
 
 6-15 [分析：拜登领导七国集团回击中国挑战初获成功](/articles/voa/1040139.md)
@@ -598,6 +600,4 @@
 6-1 [德克萨斯州长誓言继续努力通过限制投票新规](/articles/voa/1040435.md)
 
 6-1 [拜登阵亡将士纪念日发表讲话 警告民主在美国和世界都受到威胁](/articles/voa/1040436.md)
-
-6-1 [时事大家谈: 拜登重查毒源响应者众，北京反咬美国孤掌难鸣？](/articles/voa/1040437.md)
 
