--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+6-15 [眼见为虚——从欧洲杯的场边广告谈起](/articles/ft/1045481.md)
+
 6-15 [亚洲开发银行将不再支持煤炭项目](/articles/ft/1045482.md)
 
 6-11 [美国富豪为什么喜欢做慈善？（二）](/articles/ft/1045483.md)
@@ -598,6 +600,4 @@
 4-9 [后疫情外交：世界棋局中的中美欧俄复合三角关系](/articles/ft/1045779.md)
 
 4-9 [医疗专家：乔治•弗洛伊德死于“缺氧”](/articles/ft/1045780.md)
-
-4-9 [从钱币历史看比特币的估值和未来](/articles/ft/1045781.md)
 
