--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+6-15 [简报：北约首次将中国视为“系统性挑战”；武汉病毒所石正丽接受时报采访](/articles/nyt/1046735.md)
+
+6-15 [拜登呼吁G7发起“一带一路”替代方案，制衡中国](/articles/nyt/1046736.md)
+
 6-11 [男性主导的世界中，那些“不健康的女人”](/articles/nyt/1046737.md)
 
 6-11 [TED演讲治不好你的抑郁症](/articles/nyt/1046738.md)
@@ -596,8 +600,4 @@
 3-29 [拜登评估美中竞争：21世纪民主与专制的较量](/articles/nyt/1047033.md)
 
 3-29 [美国对华技术出口限制是否该更强硬？华盛顿争论不休](/articles/nyt/1047034.md)
-
-3-29 [简报：中伊签署25年全面合作协议；拜登如何定义中国威胁](/articles/nyt/1047035.md)
-
-3-26 [我们该如何谈论这些针对亚裔的袭击](/articles/nyt/1047036.md)
 
