--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-15 [北约认定中国构成“系统性挑战”，分析人士说各成员国如何应对分歧仍在](/articles/voa/1040135.md)
+
+6-15 [弗吉尼亚州夫妇在冲击国会案中认罪，为类似案件设立先例](/articles/voa/1040136.md)
+
 6-15 [活动人士称赞英国“人民法庭”就中国涉嫌虐待维吾尔人采取行动](/articles/voa/1040137.md)
 
 6-15 [面对中国的海上压力，菲律宾再次暂停取消有关美国驻军的协议](/articles/voa/1040138.md)
@@ -596,8 +600,4 @@
 6-1 [揭谎频道：中国洗白称攻占西藏为“和平解放”](/articles/voa/1040433.md)
 
 6-1 [美国作家何伟在四川大学教学合同未获续签将被迫离开中国](/articles/voa/1040434.md)
-
-6-1 [德克萨斯州长誓言继续努力通过限制投票新规](/articles/voa/1040435.md)
-
-6-1 [拜登阵亡将士纪念日发表讲话 警告民主在美国和世界都受到威胁](/articles/voa/1040436.md)
 
