--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-15 [法广｜台山核电站是否发生核泄漏？美中法三国说法不一](/articles/cdt/381402.md)
+
 6-15 [兽楼处丨消失的大学](/articles/cdt/381410.md)
 
 6-15 [码头青年 | 18年前的今天，成都饿死了一个三岁女孩](/articles/cdt/381414.md)
@@ -598,6 +600,4 @@
 5-11 [麦杰逊 | 成都49中，你到底想隐瞒什么？](/articles/cdt/382756.md)
 
 5-10 [【麻辣总局】在女仆店听到一首词很像“习近平习近平习近平”的歌](/articles/cdt/382763.md)
-
-5-10 [三联生活周刊｜“宠物盲盒”事件：畸形的消费谋杀](/articles/cdt/382764.md)
 
