--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-15 [专访：欧美在贸易政策上难以一致对中](/articles/dw/1041932.md)
+
 6-15 [中国威胁仍在  「菲美军队互访协定」三度延後终止](/articles/dw/1041933.md)
 
 6-15 [联合国专家称中国强摘被关押人器官 北京驳斥](/articles/dw/1041934.md)
@@ -598,6 +600,4 @@
 5-28 [大赦国际 能否与时俱进？](/articles/dw/1042230.md)
 
 5-28 [脸书“变脸“: 不再删除有关“新冠病毒系人造“的贴文](/articles/dw/1042231.md)
-
-5-28 [台湾的疫苗危机何时才能解除？](/articles/dw/1042232.md)
 
