--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+6-15 [武汉病毒所石正丽驳斥实验室泄露说](/articles/nyt/1046731.md)
+
+6-15 [越到生命的末尾，爱情越甜](/articles/nyt/1046732.md)
+
 6-15 [北约关注点转向，将中国视为全球安全挑战](/articles/nyt/1046733.md)
 
 6-15 [台山核电站被指“异常活动”，法国合资方承认存在问题](/articles/nyt/1046734.md)
@@ -596,8 +600,4 @@
 3-30 [简报：中国意欲领导反美联盟；中国官场女性境遇引发关注](/articles/nyt/1047029.md)
 
 3-29 [辅警许艳案：性、腐败与中国官场中的女性境遇](/articles/nyt/1047030.md)
-
-3-29 [苏伊士运河堵塞事件：过度全球化敲响的警钟？](/articles/nyt/1047031.md)
-
-3-29 [中国与伊朗签署25年合作协议，价值4000亿美元](/articles/nyt/1047032.md)
 
