--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+6-15 [G7峰会多方指责中国 中国外交部：一国或一个国家集团号令天下的时代已过了](/articles/reuters/1036870.md)
+
+6-15 [中国股市收低 中国与西方关系紧张损害投资者人气](/articles/reuters/1036871.md)
+
+6-15 [中国外交部：台山核电站满足有关技术要求 周边辐射环境水平未见异常](/articles/reuters/1036872.md)
+
 6-15 [调查：日本经济第二季有望避免萎缩 但分析师大幅下调增长预期](/articles/reuters/1036873.md)
 
 6-15 [分析：中国央行无悬念等量续做MLF 年中节点料仍“佛系”操作以静制动](/articles/reuters/1036874.md)
@@ -594,10 +600,4 @@
 6-8 [油价因获利了结回落 此前受OPEC+限产推升至两年高位](/articles/reuters/1037168.md)
 
 6-8 [美元下跌之际金价上涨 关注美国通胀数据和美联储线索](/articles/reuters/1037169.md)
-
-6-7 [长春高新及其子公司拟与思安信就取得新冠疫苗及技术签署合作协议](/articles/reuters/1037170.md)
-
-6-7 [焦点：从失业救济将取消到球场全面开放 6月或为美国复苏的重要转折](/articles/reuters/1037171.md)
-
-6-7 [今年首季全球智能手机销量同比增26% 晶片短缺或令售价上涨--Gartner](/articles/reuters/1037172.md)
 
