--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-15 [香港美国商会会长：国安法界限模糊 人才流失已开始](/articles/voa/1040133.md)
+
 6-15 [美国司法部“中国行动计划”核心人物德默斯即将卸任](/articles/voa/1040134.md)
 
 6-15 [北约认定中国构成“系统性挑战”，分析人士说各成员国如何应对分歧仍在](/articles/voa/1040135.md)
@@ -598,6 +600,4 @@
 6-1 [三孩政策仍是计划生育 专家忧中国下一步会否强制生育](/articles/voa/1040431.md)
 
 6-1 [消息人士：意大利允许沃达丰有条件使用华为的5G设备](/articles/voa/1040432.md)
-
-6-1 [揭谎频道：中国洗白称攻占西藏为“和平解放”](/articles/voa/1040433.md)
 
