--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+6-15 [焦点：就业缺口vs通胀反弹 美联储如履薄冰步步惊心](/articles/reuters/1036862.md)
+
+6-15 [北京控股称北京国资委拟引入长江三峡集团为其母公司战略投资者](/articles/reuters/1036863.md)
+
+6-15 [英国与澳洲达成自由贸易协议](/articles/reuters/1036864.md)
+
+6-15 [欧盟法院支持国家数据监督机构的权力 对Facebook等科技巨头构成打击](/articles/reuters/1036865.md)
+
 6-15 [欧元区4月贸易顺差激增但低于预期 对中国逆差扩大](/articles/reuters/1036866.md)
 
 6-15 [热点解析：美国债务上限迫在眉睫 暗藏怎样的市场风险？](/articles/reuters/1036867.md)
@@ -592,12 +600,4 @@
 6-8 [比亚迪5月新能源汽车销量32,800辆 较去年同期大增近190%](/articles/reuters/1037160.md)
 
 6-8 [拜登上任后未能扭转美国形象下滑趋势 中国的声誉提升--调查](/articles/reuters/1037161.md)
-
-6-8 [路透测算的人民币中间价料开在6.3908元附近 较上日升55点](/articles/reuters/1037162.md)
-
-6-8 [中国无锡不锈钢交易所计划最早7月推出锂合约--消息人士](/articles/reuters/1037163.md)
-
-6-8 [市场洞察：中国5月外储现两连升 人民币单边偏强或被动推高规模](/articles/reuters/1037164.md)
-
-6-8 [美国报告认为COVID-19可能是从武汉实验室泄露的--华尔街日报](/articles/reuters/1037165.md)
 
