--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+6-15 [欧盟执委会主席称欧美已解决飞机补贴争端](/articles/reuters/1036860.md)
+
+6-15 [中国国家医保局：建立全国医疗保障风险管控机制，设立医疗保障风险调剂金](/articles/reuters/1036861.md)
+
 6-15 [焦点：就业缺口vs通胀反弹 美联储如履薄冰步步惊心](/articles/reuters/1036862.md)
 
 6-15 [北京控股称北京国资委拟引入长江三峡集团为其母公司战略投资者](/articles/reuters/1036863.md)
@@ -596,8 +600,4 @@
 6-8 [中国将根据东盟需要提供更多疫苗 并开展采购、接种等合作--国务委员王毅](/articles/reuters/1037158.md)
 
 6-8 [中国央行要求银行报备存贷款和同业业务利率情况及债券业务明细--消息人士](/articles/reuters/1037159.md)
-
-6-8 [比亚迪5月新能源汽车销量32,800辆 较去年同期大增近190%](/articles/reuters/1037160.md)
-
-6-8 [拜登上任后未能扭转美国形象下滑趋势 中国的声誉提升--调查](/articles/reuters/1037161.md)
 
