--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-15 [亚股涨多跌少 – 法国国际广播电台 - RFI](/articles/rfi/1027985.md)
+
 6-15 [北约首将中国公开视为“系统性挑战” 北京奉劝停止渲染各式“中国威胁论” - 要闻解说](/articles/rfi/1027986.md)
 
 6-15 [拜登：会向蒲亭清楚画定红线 – 法国国际广播电台 - RFI](/articles/rfi/1027987.md)
@@ -598,6 +600,4 @@
 6-10 [拜登抵英准备出席七国集团峰会](/articles/rfi/1028283.md)
 
 6-10 [美国政府计划向全球捐赠5亿剂辉瑞新冠疫苗](/articles/rfi/1028284.md)
-
-6-10 [美国防部长奥斯汀下令加强应对中国挑战](/articles/rfi/1028285.md)
 
