--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-15 [法国IKEA涉非法监视员工和求职者 法院判有罪 – 法国国际广播电台 - RFI](/articles/rfi/1027982.md)
+
+6-15 [七国集团共同抗衡中 - 柏林飞鸿](/articles/rfi/1027983.md)
+
+6-15 [法国媒体一致关注台山核电站核泄漏疑云 - 法国报纸摘要](/articles/rfi/1027984.md)
+
 6-15 [亚股涨多跌少 – 法国国际广播电台 - RFI](/articles/rfi/1027985.md)
 
 6-15 [北约首将中国公开视为“系统性挑战” 北京奉劝停止渲染各式“中国威胁论” - 要闻解说](/articles/rfi/1027986.md)
@@ -594,10 +600,4 @@
 6-10 [欧洲股市小幅涨跌 仍近历史高点 – 法国国际广播电台 - RFI](/articles/rfi/1028280.md)
 
 6-10 [法网/纳达尔第14度闯进四强 挑战第21座大满贯金杯 – 法国国际广播电台 - RFI](/articles/rfi/1028281.md)
-
-6-10 [美国通膨数据公布前 美股3大指数收盘走低 – 法国国际广播电台 - RFI](/articles/rfi/1028282.md)
-
-6-10 [拜登抵英准备出席七国集团峰会](/articles/rfi/1028283.md)
-
-6-10 [美国政府计划向全球捐赠5亿剂辉瑞新冠疫苗](/articles/rfi/1028284.md)
 
