--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-15 [美欧实现飞机业贸易纠纷休战 缓解关系迈出重大一步](/articles/voa/1040128.md)
+
 6-15 [台湾新确诊新冠病例持续走低 连续三天低于200例](/articles/voa/1040129.md)
 
 6-15 [里根号航母战斗群进入南中国海履行例行任务](/articles/voa/1040130.md)
@@ -598,6 +600,4 @@
 6-1 [六四走过尘封的32年 “小粉红”成中国青年主流力量？](/articles/voa/1040426.md)
 
 6-1 [祸不单行 被中国实施进口禁令的 JBS食品公司受网络攻击暂停部分营运](/articles/voa/1040427.md)
-
-6-1 [六四周年临近 喊“结束一党专政”口号是否违法？香港特首回应：要尊重中国宪法](/articles/voa/1040428.md)
 
