--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-16 [“为掌权不惜代价” 中共百年后何以成为世界秩序的最大威胁？](/articles/voa/1040119.md)
+
+6-16 [研究显示新冠病毒2019年12月中旬便在美国出现](/articles/voa/1040120.md)
+
+6-16 [时事大家谈: 拜登欧洲行，民主集体向独裁亮剑？](/articles/voa/1040121.md)
+
 6-16 [拜登总统宣布美国首个应对国内恐怖主义战略](/articles/voa/1040122.md)
 
 6-16 [美俄峰会牵动北京 普京或面临历史性选择](/articles/voa/1040123.md)
@@ -594,10 +600,4 @@
 6-2 [时事大家谈: “躺平”为何在中国突然流行并引发争议？](/articles/voa/1040417.md)
 
 6-2 [香港民调：47%市民支持平反六四创18年新低 支联会指民意未逆转](/articles/voa/1040418.md)
-
-6-2 [人权报告：由于制度缺失，中国开放多胎生育给女性带来更多歧视](/articles/voa/1040419.md)
-
-6-2 [澳新总理对中国人权及南中国海问题表示严重关切，中国指责二人干涉内政](/articles/voa/1040420.md)
-
-6-1 [中国政府否认澳大利亚籍华裔作家杨恒均遭受刑讯逼供的指控](/articles/voa/1040421.md)
 
