--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-16 [中国骇客利用远程接入软件漏洞入侵美国通信网络](/articles/voa/1040116.md)
+
+6-16 [美国会众议员提出法案，在调查武毒所的问题上制裁中共官员](/articles/voa/1040117.md)
+
+6-16 [文件显示特朗普曾向司法部施压以扭转选举失利局面](/articles/voa/1040118.md)
+
 6-16 [“为掌权不惜代价” 中共百年后何以成为世界秩序的最大威胁？](/articles/voa/1040119.md)
 
 6-16 [研究显示新冠病毒2019年12月中旬便在美国出现](/articles/voa/1040120.md)
@@ -594,10 +600,4 @@
 6-2 [白俄罗斯反对派活动人士法庭听证时刺喉自伤抗议](/articles/voa/1040414.md)
 
 6-2 [世卫组织批准紧急使用中国科兴新冠疫苗](/articles/voa/1040415.md)
-
-6-2 [研究报告：中国国有企业用绿色融资规则漏洞资助燃煤电厂](/articles/voa/1040416.md)
-
-6-2 [时事大家谈: “躺平”为何在中国突然流行并引发争议？](/articles/voa/1040417.md)
-
-6-2 [香港民调：47%市民支持平反六四创18年新低 支联会指民意未逆转](/articles/voa/1040418.md)
 
