--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-16 [美国新冠死亡人数破60万，８个州疫情升温](/articles/rfi/1027956.md)
+
+6-16 [风景秀丽的塔恩河谷](/articles/rfi/1027957.md)
+
+6-16 [C罗梅开二度成欧国杯进球王 葡萄牙3比0踢倒匈牙利 – 法国国际广播电台 - RFI](/articles/rfi/1027958.md)
+
 6-16 [北约强调网络防御新政策 拜登见普京也将就此过招儿](/articles/rfi/1027959.md)
 
 6-16 [美欧关税战停 共同对抗中国？ - 要闻分析](/articles/rfi/1027960.md)
@@ -594,10 +600,4 @@
 6-10 [意大利工业生产水平重回并超过疫情前](/articles/rfi/1028254.md)
 
 6-10 [拜登取消禁止TikTok与WeChat计画 – 法国国际广播电台 - RFI](/articles/rfi/1028255.md)
-
-6-10 [印度单日6148人死于COVID-19 创全球新高纪录 – 法国国际广播电台 - RFI](/articles/rfi/1028256.md)
-
-6-10 [缅甸：昂山素季被控犯有腐败罪](/articles/rfi/1028257.md)
-
-6-10 [抓捕上千名洗钱的币农：中国再收紧虚拟货币监管之网](/articles/rfi/1028258.md)
 
