--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-16 [六点问答：中国台山核电站到底怎么了？](/articles/voa/1040107.md)
+
 6-16 [英法领导人支持澳大利亚反抗中国的经济胁迫](/articles/voa/1040108.md)
 
 6-16 [拜登政府宣布计划，接纳更多的中美洲未成年人](/articles/voa/1040109.md)
@@ -598,6 +600,4 @@
 6-2 [美副国务卿会见洪森 “严重关注”中国在柬设立军事设施**](/articles/voa/1040405.md)
 
 6-2 [大步迈向独裁 香港当局以无牌经营迫使六四纪念馆关闭](/articles/voa/1040406.md)
-
-6-2 [追查新冠源头 美国情报界要如何调查？](/articles/voa/1040407.md)
 
