--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,40 @@
 路透
 ------
 
+6-16 [美国应对中国科技威胁的全面法案可能需要数周才会获批](/articles/reuters/1036843.md)
+
+6-16 [美国和欧盟承诺在新冠疫情、俄罗斯、中国和其他问题上进行合作](/articles/reuters/1036844.md)
+
+6-16 [土耳其央行称与中国达成新货币互换协议 互换额度增加230亿元人民币](/articles/reuters/1036845.md)
+
+6-16 [美国4月整体资本净流入1,012亿美元 中国微幅减持美国公债](/articles/reuters/1036846.md)
+
+6-16 [阿里巴巴副主席蔡崇信称马云“目前处事低调”--CNBC](/articles/reuters/1036847.md)
+
+6-16 [美国应在各个领域进一步发展与台湾的关系--助理国务卿提名人](/articles/reuters/1036848.md)
+
+6-16 [早在报告首例新冠确诊病例几周前 美国五个州已有七人感染该病毒--政府研究](/articles/reuters/1036849.md)
+
+6-16 [哈马斯电台称以色列空袭加沙地带](/articles/reuters/1036850.md)
+
+6-16 [焦点：美欧同意近17年飞机补贴争端休战 恐鹬蚌相争渔翁得利](/articles/reuters/1036851.md)
+
+6-16 [美参议员敦促商务部长迅速确定恐被中国军方和情报机构利用的美国技术](/articles/reuters/1036852.md)
+
+6-16 [焦点:“世界变了，彻底变了” 拜登冀结束美欧贸易战来团结应对中国挑战](/articles/reuters/1036853.md)
+
+6-16 [中国“货运版Uber”满帮的美国IPO目标是估值超200亿美元](/articles/reuters/1036854.md)
+
+6-16 [路透测算的人民币中间价料升至6.4047元附近 美元保持坚挺](/articles/reuters/1036855.md)
+
+6-16 [通胀数据发布后美元升至一个月高位 市场等待美联储会议结果](/articles/reuters/1036856.md)
+
+6-16 [美股收低 美国最新数据令等待美联储会议结果的投资者更加紧张](/articles/reuters/1036857.md)
+
+6-16 [油价上涨近2%触及逾两年最高 受需求复苏预期提振](/articles/reuters/1036858.md)
+
+6-16 [金价下跌 市场押注美联储可能概述缩减支持计划](/articles/reuters/1036859.md)
+
 6-15 [欧盟执委会主席称欧美已解决飞机补贴争端](/articles/reuters/1036860.md)
 
 6-15 [中国国家医保局：建立全国医疗保障风险管控机制，设立医疗保障风险调剂金](/articles/reuters/1036861.md)
@@ -566,38 +600,4 @@
 6-8 [苹果的隐私保护新功能因监管原因在中国将不可用](/articles/reuters/1037141.md)
 
 6-8 [亚股开盘上涨，MSCI明晟全球市场指数创史上最高收位](/articles/reuters/1037142.md)
-
-6-8 [只有快速转型实现“净零”排放才能提升全球GDP--央行联合组织报告](/articles/reuters/1037143.md)
-
-6-8 [房利美调查显示 认为现在是买房好时机的美国消费者占比创纪录新低](/articles/reuters/1037144.md)
-
-6-8 [大型科技企业支持全球征税 但希望能取消数字服务税](/articles/reuters/1037145.md)
-
-6-8 [焦点：5月日本公债市场成交量创近20年最低 日本央行重振债市的希望落空](/articles/reuters/1037146.md)
-
-6-8 [美国查获Colonial支付给黑客的价值230万美元比特币](/articles/reuters/1037147.md)
-
-6-8 [亚马逊创始人贝佐斯下月将乘自己公司研发的火箭飞往太空](/articles/reuters/1037148.md)
-
-6-8 [美国股市和科技股对G7税收协议反应平平](/articles/reuters/1037149.md)
-
-6-8 [“网红股”持续上涨 美国SEC称正在密切关注市场寻找不当和操纵行为](/articles/reuters/1037150.md)
-
-6-8 [IAEA总干事称延长与伊朗的监督协议难度加大](/articles/reuters/1037151.md)
-
-6-8 [巴塞尔银行监管委员会就银行加密资产资本规则进行咨询](/articles/reuters/1037152.md)
-
-6-8 [北约秘书长称中国不“认同我们的价值观”](/articles/reuters/1037153.md)
-
-6-8 [焦点：谷歌遭法国当局罚款2.68亿美元 将调整全球广告做法](/articles/reuters/1037154.md)
-
-6-8 [中国恒大斥资3.36亿港元回购股份 公司此前称少量商票未及时兑付并安排兑付](/articles/reuters/1037155.md)
-
-6-8 [调查：通胀居高不下 俄罗斯央行周五料再次加息](/articles/reuters/1037156.md)
-
-6-8 [焦点：美国务卿布林肯暗指或将重启与台湾的“贸易与投资框架协定”磋商](/articles/reuters/1037157.md)
-
-6-8 [中国将根据东盟需要提供更多疫苗 并开展采购、接种等合作--国务委员王毅](/articles/reuters/1037158.md)
-
-6-8 [中国央行要求银行报备存贷款和同业业务利率情况及债券业务明细--消息人士](/articles/reuters/1037159.md)
 
