--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-16 [中国政府暴行下，一名维吾尔女性的艰难旅程](/articles/nyt/1046730.md)
+
 6-15 [武汉病毒所石正丽驳斥实验室泄露说](/articles/nyt/1046731.md)
 
 6-15 [越到生命的末尾，爱情越甜](/articles/nyt/1046732.md)
@@ -598,6 +600,4 @@
 3-30 [专制联盟vs.民主联盟？中国欲领导新国际秩序](/articles/nyt/1047028.md)
 
 3-30 [简报：中国意欲领导反美联盟；中国官场女性境遇引发关注](/articles/nyt/1047029.md)
-
-3-29 [辅警许艳案：性、腐败与中国官场中的女性境遇](/articles/nyt/1047030.md)
 
