--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-16 [欧美峰会再压中国 北京:不会被吓倒](/articles/dw/1041918.md)
+
+6-16 [美准亚太助卿：华府应全面拓展与台关系](/articles/dw/1041919.md)
+
 6-16 [法国电力：台山核电曾主动排气，没有核泄漏](/articles/dw/1041920.md)
 
 6-16 [美欧就空客波音补贴达成协议 放弃制裁关税](/articles/dw/1041921.md)
@@ -596,8 +600,4 @@
 5-29 [支联会六四集会上诉被驳回 警方：将果断执法](/articles/dw/1042216.md)
 
 5-29 [“劫持”客机事件：美国宣布恢复制裁白俄罗斯](/articles/dw/1042217.md)
-
-5-29 [德排外政党盯上香港政治难民](/articles/dw/1042218.md)
-
-5-29 [老友记重聚特辑：哪些画面在中国被删？](/articles/dw/1042219.md)
 
