--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,20 @@
 路透
 ------
 
+6-16 [道富环球削减全球股市持仓 担忧市场太放心通胀与升息风险](/articles/reuters/1036833.md)
+
+6-16 [中国5月手机出货量同比大降逾三成 因需求提前释放、手机缺“芯”等--信通院](/articles/reuters/1036834.md)
+
+6-16 [美国IPO热火朝天 半年规模已超过去年全年的纪录高位](/articles/reuters/1036835.md)
+
+6-16 [综述：迈步空间站时代 中国神舟十二号载人飞船将携三人周四飞赴太空](/articles/reuters/1036836.md)
+
+6-16 [人民币持续单边升值会影响就业乃至扩内需 不能掉以轻心--原外管局官员](/articles/reuters/1036837.md)
+
+6-16 [澳洲公众对中国的态度变差 支持政府对中国采取更强硬政策路线--调查](/articles/reuters/1036838.md)
+
+6-16 [亚股低迷投资者等待美联储决议 油价持续攀升](/articles/reuters/1036839.md)
+
 6-16 [图表新闻：2020年代更像咆哮的20年代 还是通胀猛如虎的70年代？](/articles/reuters/1036840.md)
 
 6-16 [焦点：“拜普会”可能分歧大共识少 几无希望取得任何突破](/articles/reuters/1036841.md)
@@ -586,18 +600,4 @@
 6-8 [“美国回来了” 拜登访欧前夕欧盟乐见多边主义](/articles/reuters/1037131.md)
 
 6-8 [独家：苹果正与宁德时代及比亚迪洽谈电动车电池供应--消息](/articles/reuters/1037132.md)
-
-6-8 [深圳公布激励政策抢抓卫星相关产业机遇 资助额最高可达3亿元](/articles/reuters/1037133.md)
-
-6-8 [焦点：有关G7针对跨国公司税收协议的几个问题](/articles/reuters/1037134.md)
-
-6-8 [分析：拜登扩大中企投资禁令 门槛降低或让更多中企中招](/articles/reuters/1037135.md)
-
-6-8 [图表新闻：亚洲企业对未来12个月获利预期的升幅为六个月来最大](/articles/reuters/1037136.md)
-
-6-8 [数据观测：中国5月CPI同比涨1.6% PPI加速冲高至8.5%或创逾12年半高点](/articles/reuters/1037137.md)
-
-6-8 [5月全球黄金ETF持仓回升 中国基金主导下亚洲继续流出--世界黄金协会](/articles/reuters/1037138.md)
-
-6-8 [基因测序仪厂商齐碳科技B轮融资超4亿元，高瓴创投、鼎晖VGC联合领投](/articles/reuters/1037139.md)
 
