--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-16 [美军中东指挥官：应在中国出现的所有地方应对其挑战](/articles/voa/1040105.md)
+
 6-16 [视北京为最大战略威胁 美亚太助卿人选承诺全面深化对台关系](/articles/voa/1040106.md)
 
 6-16 [六点问答：中国台山核电站到底怎么了？](/articles/voa/1040107.md)
@@ -598,6 +600,4 @@
 6-2 [新一波疫情突袭 中国广东强化应对措施](/articles/voa/1040403.md)
 
 6-2 [澳门警方首次以违法煽颠为由禁办六四烛光集会](/articles/voa/1040404.md)
-
-6-2 [美副国务卿会见洪森 “严重关注”中国在柬设立军事设施**](/articles/voa/1040405.md)
 
