--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+6-16 [eBay将以约36亿美元把旗下韩国事业出售给新世界和Naver--媒体](/articles/reuters/1036821.md)
+
+6-16 [黑石集团接近达成以30亿美元收购SOHO中国的交易--彭博新闻](/articles/reuters/1036822.md)
+
 6-16 [中储粮将进行本月第二次进口玉米拍卖 补充紧张的供应为高价降温](/articles/reuters/1036823.md)
 
 6-16 [印尼摩鹿加群岛附近发生6.1级地震](/articles/reuters/1036824.md)
@@ -596,8 +600,4 @@
 6-8 [多个社交媒体和新闻网站遭遇重大网络故障](/articles/reuters/1037119.md)
 
 6-8 [独家：中国当局下令中石油燃料油停止与地炼交易配额](/articles/reuters/1037120.md)
-
-6-8 [焦点：广东地方债利率破隐形下限 放松指导市场化定价驶入快车道](/articles/reuters/1037121.md)
-
-6-8 [李嘉诚基金会与长实、长和推两千万港元“疫苗大抽奖” 头奖礼券500万可买楼](/articles/reuters/1037122.md)
 
