--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,20 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-16 [【立此存照】复旦为王永珍书记发起募捐  大量评论询问如何为姜老师捐款](/articles/cdt/381381.md)
+
+6-16 [美国之音 | “为掌权不惜代价” 中共百年后何以成为世界秩序的最大威胁？](/articles/cdt/381383.md)
+
+6-16 [旧闻评论 | 可耻的知识分子？| 舆论手札](/articles/cdt/381385.md)
+
+6-16 [【网络民议】央视给景甜p的裙子](/articles/cdt/381388.md)
+
+6-15 [【CDT推荐】本周推荐媒体](/articles/cdt/381390.md)
+
+6-15 [【网络民议】我觉得我爸爸被洗脑了怎么办？](/articles/cdt/381396.md)
+
+6-15 [X博士｜在抖音上寻亲的伤心人们](/articles/cdt/381400.md)
+
 6-15 [法广｜台山核电站是否发生核泄漏？美中法三国说法不一](/articles/cdt/381402.md)
 
 6-15 [兽楼处丨消失的大学](/articles/cdt/381410.md)
@@ -586,18 +600,4 @@
 5-11 [丁香医生｜最新数据！中国男性比女性多 3490 万，消失的女性去哪儿了？](/articles/cdt/382712.md)
 
 5-11 [【立此存照】“请画下成都49中的事情吧” 乌合麒麟：现在画太草率](/articles/cdt/382727.md)
-
-5-11 [【网络民议】教育局通报成都四十九中学生坠亡：属个人行为](/articles/cdt/382738.md)
-
-5-11 [自由亚洲 | “端点星”案即将开审  陈玫、蔡伟家属吁“孩子无罪，判一天都不行”](/articles/cdt/382739.md)
-
-5-11 [端传媒 | 学者粉圈、民粹动员与流量经济：当民族主义学者沈逸“网暴”胡锡进](/articles/cdt/382743.md)
-
-5-11 [曹教授 | 警惕全社会正在滑向掩盖真相死不认错的边缘](/articles/cdt/382745.md)
-
-5-11 [中产生活观察 | 中间地带的消失：你的哭声谁能听见](/articles/cdt/382755.md)
-
-5-11 [麦杰逊 | 成都49中，你到底想隐瞒什么？](/articles/cdt/382756.md)
-
-5-10 [【麻辣总局】在女仆店听到一首词很像“习近平习近平习近平”的歌](/articles/cdt/382763.md)
 
