--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+6-16 [中国外交部：美欧峰会声明远超正常双边关系 反对搞针对第三国的“小圈子”](/articles/reuters/1036815.md)
+
+6-16 [中国股市收跌逾1% 材料股下挫和外资流出担忧拖累大盘](/articles/reuters/1036816.md)
+
+6-16 [中国统计局称就业仍然有压力 大学生就业难与企业招工难并存](/articles/reuters/1036817.md)
+
 6-16 [独家：中国将出台严厉新规 整顿教育培训行业--消息人士](/articles/reuters/1036818.md)
 
 6-16 [印尼警告摩鹿加群岛地震后 存在发生余震和海啸的风险](/articles/reuters/1036819.md)
@@ -594,10 +600,4 @@
 6-9 [美国务卿布林肯质疑新冠病毒可能来自武汉实验室的报告的研究方法](/articles/reuters/1037113.md)
 
 6-9 [美国CDC放宽对包括日本在内110多个国家和地区的旅行建议 对中国限制不变](/articles/reuters/1037114.md)
-
-6-9 [中国和东盟同意避免在南海采取挑衅性行动--东盟声明](/articles/reuters/1037115.md)
-
-6-9 [中国国防部：美议员搭军机访台是“非常恶劣的政治挑衅” 对此表示坚决反对](/articles/reuters/1037116.md)
-
-6-9 [路透测算的人民币中间价料开在6.398元附近 较上日贬71点](/articles/reuters/1037117.md)
 
