--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+6-16 [亚洲国家为何从抗疫模范变后进？](/articles/nyt/1046724.md)
+
+6-16 [“对牛弹琴”？丹麦农舍为奶牛举办音乐会](/articles/nyt/1046725.md)
+
 6-16 [美欧搁置飞机补贴争端，共同应对中国挑战](/articles/nyt/1046726.md)
 
 6-16 [研究显示新冠感染者或面临长期后遗症](/articles/nyt/1046727.md)
@@ -596,8 +600,4 @@
 3-31 [香港新选举制度将带来哪些影响？](/articles/nyt/1047022.md)
 
 3-31 [简报：详解香港选举制度改革；纽约再发生袭击亚裔事件](/articles/nyt/1047023.md)
-
-3-30 [“对国家不敬”：新国安法挤压香港艺术表达空间](/articles/nyt/1047024.md)
-
-3-30 [H&M与新疆棉：中国如何掀起一场爱国愤怒风暴](/articles/nyt/1047025.md)
 
