--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+6-16 [金正恩就朝鲜粮食短缺发出警告](/articles/ft/1045470.md)
+
 6-16 [解密通胀谜题系列：美国大通胀时代即将到来吗？](/articles/ft/1045471.md)
 
 6-16 [投资中加杠杆是好主意吗？](/articles/ft/1045472.md)
@@ -598,6 +600,4 @@
 4-12 [一周世界舆论聚焦：中国对中美关系要有具体的长远打算](/articles/ft/1045768.md)
 
 4-12 [伦敦摘得去年豪宅销量桂冠 超过香港和纽约](/articles/ft/1045769.md)
-
-4-12 [为什么中国网红费用比美国贵很多？](/articles/ft/1045770.md)
 
