--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-16 [荣誉非国民｜对编程随想处境的一点推测](/articles/cdt/381366.md)
+
 6-16 [十四十四｜罗翔的结局，已经写好了](/articles/cdt/381371.md)
 
 6-16 [【立此存照】复旦为王永珍书记发起募捐  大量评论询问如何为姜老师捐款](/articles/cdt/381381.md)
@@ -598,6 +600,4 @@
 5-11 [蓝鲸财经｜技嘉辱华？京东天猫苏宁等电商平台下架技嘉产品](/articles/cdt/382709.md)
 
 5-12 [无逸说｜“求真求实，至善至美”](/articles/cdt/382710.md)
-
-5-11 [丁香医生｜最新数据！中国男性比女性多 3490 万，消失的女性去哪儿了？](/articles/cdt/382712.md)
 
