--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-16 [东盟防长会议聚焦南中国海 中国对周边国家既打又拉](/articles/voa/1040102.md)
+
 6-16 [金正恩称朝鲜对付新冠病毒的封锁措施可能会旷日持久](/articles/voa/1040103.md)
 
 6-16 [美欧峰会后称会协调对华政策 中方不满欧美“拉帮结派”](/articles/voa/1040104.md)
@@ -598,6 +600,4 @@
 6-3 [美国呼吁北约深化与日韩关系 敦促太平洋岛国警惕“经济胁迫”](/articles/voa/1040400.md)
 
 6-2 [一波三折，国际奥委会再次表态 东京奥运会要如期举办](/articles/voa/1040401.md)
-
-6-2 [中国16架军机入侵马来西亚领空 马外交部称将召见中国大使](/articles/voa/1040402.md)
 
