--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-16 [每日经济新闻｜重庆市教委发布重要通知：禁止公办普通高中招收复读生](/articles/cdt/381363.md)
+
 6-16 [荣誉非国民｜对编程随想处境的一点推测](/articles/cdt/381366.md)
 
 6-16 [十四十四｜罗翔的结局，已经写好了](/articles/cdt/381371.md)
@@ -598,6 +600,4 @@
 5-11 [骚客文艺｜杭州的豹子找不到了，成都49中真相找不到了](/articles/cdt/382703.md)
 
 5-11 [蓝鲸财经｜技嘉辱华？京东天猫苏宁等电商平台下架技嘉产品](/articles/cdt/382709.md)
-
-5-12 [无逸说｜“求真求实，至善至美”](/articles/cdt/382710.md)
 
