--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-16 [美联合盟友应对中国挑战，中国提升对台军事压力](/articles/rfi/1027925.md)
+
+6-16 [拜登和蒲亭握手  展开日内瓦高峰会 – 法国国际广播电台 - RFI](/articles/rfi/1027926.md)
+
+6-16 [高压情势下的美俄峰会 - 法国报纸摘要](/articles/rfi/1027927.md)
+
+6-16 [日本接种后196人死亡 是否与辉瑞疫苗相关？ - 东京专栏](/articles/rfi/1027928.md)
+
+6-16 [“一欧元食堂”扶贫计划推出18个月，未能取得预期成果 - 法国风土人情](/articles/rfi/1027929.md)
+
 6-16 [美欧峰会联合声明：反对全球一切形式的威权主义](/articles/rfi/1027930.md)
 
 6-16 [世界最长海底电力电缆  720公里连贯英国挪威 – 法国国际广播电台 - RFI](/articles/rfi/1027931.md)
@@ -590,14 +600,4 @@
 6-11 [拜登与约翰逊举行会谈 强调美英在多领域共同合作](/articles/rfi/1028223.md)
 
 6-11 [中国人大通过&quot;反外国制裁法&quot;应对美欧贸易和人权压力](/articles/rfi/1028224.md)
-
-6-11 [英国发表《香港问题半年报告》指责北京镇压异见人士](/articles/rfi/1028225.md)
-
-6-11 [国际社会帮助协调各国政府应对气候挑战的行动的三个方向 - 今日经济](/articles/rfi/1028226.md)
-
-6-11 [中美承诺合作应对气候危机 - 环境与发展](/articles/rfi/1028227.md)
-
-6-11 [新冠起源：法国科学家重新朝着来自实验室的线索调查](/articles/rfi/1028228.md)
-
-6-11 [采取生态行动的大西洋城市——拉罗谢尔 - 法国风光](/articles/rfi/1028229.md)
 
