--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+6-16 [马克龙：坚决反对对澳大利亚采取胁迫性经济措施](/articles/rfi/1027916.md)
+
+6-16 [日防相在东盟防长扩大会议提台海和平稳定重要性](/articles/rfi/1027917.md)
+
+6-16 [制衡中国 美国防部考虑在太平洋组建常设海军特遣部队](/articles/rfi/1027918.md)
+
+6-16 [全球疫情确诊逾1亿7656万例 超过382万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1027919.md)
+
 6-16 [白俄迫降客机事件 欧盟同意祭出新制裁 – 法国国际广播电台 - RFI](/articles/rfi/1027920.md)
 
 6-16 [英国5月CPI 创疫情爆发前至今最高 – 法国国际广播电台 - RFI](/articles/rfi/1027921.md)
@@ -592,12 +600,4 @@
 6-11 [法国赠送美国的第二尊自由女神像将于美国独立日前夕到达纽约](/articles/rfi/1028214.md)
 
 6-11 [深圳新冠病例延迟汉堡航运](/articles/rfi/1028215.md)
-
-6-11 [法网女单决准决赛 卡雷茨科娃击退莎卡瑞晋级 – 法国国际广播电台 - RFI](/articles/rfi/1028216.md)
-
-6-11 [强生：英美欧对北爱和平立场相同 – 法国国际广播电台 - RFI](/articles/rfi/1028217.md)
-
-6-11 [法网混双 英美联军夺冠 – 法国国际广播电台 - RFI](/articles/rfi/1028218.md)
-
-6-11 [中国反外国制裁法谁会害怕](/articles/rfi/1028219.md)
 
