--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+6-17 [普京：与拜登的会面中没有敌意 在谈论各自红线时相互理解](/articles/rfi/1027908.md)
+
+6-17 [研究：帮浦持续给药 有助降低巴金森氏症药效波动 – 法国国际广播电台 - RFI](/articles/rfi/1027909.md)
+
+6-17 [拜登与蒲亭首次峰会  历时3.5小时结束 – 法国国际广播电台 - RFI](/articles/rfi/1027910.md)
+
+6-17 [波札那发现1098克拉全球第三大钻石原石 – 法国国际广播电台 - RFI](/articles/rfi/1027911.md)
+
 6-17 [法国明日起解除户外佩戴口罩令 周日起解除宵禁](/articles/rfi/1027912.md)
 
 6-17 [疫情升温 莫斯科市下令强制服务业接种疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1027913.md)
@@ -592,12 +600,4 @@
 6-11 [G7峰会前夕 美国第一夫人衣着展现关爱全球讯息 – 法国国际广播电台 - RFI](/articles/rfi/1028206.md)
 
 6-11 [疫情后北美线游轮首航 名人千禧号2游客阳性反应 – 法国国际广播电台 - RFI](/articles/rfi/1028207.md)
-
-6-11 [美国佛州超市爆枪击 3死含1童及嫌犯 – 法国国际广播电台 - RFI](/articles/rfi/1028208.md)
-
-6-11 [波多黎各变电所发生火灾 全岛大停电 – 法国国际广播电台 - RFI](/articles/rfi/1028209.md)
-
-6-11 [波多黎各电力公司通报遇网攻 不久后变电所传火警 – 法国国际广播电台 - RFI](/articles/rfi/1028210.md)
-
-6-11 [美财长忧心 中国放贷者恐因国际债务减免获益 – 法国国际广播电台 - RFI](/articles/rfi/1028211.md)
 
