--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-17 [环团人士乘滑翔翼抗议 掉进欧国杯赛场致2伤 – 法国国际广播电台 - RFI](/articles/rfi/1027907.md)
+
 6-17 [普京：与拜登的会面中没有敌意 在谈论各自红线时相互理解](/articles/rfi/1027908.md)
 
 6-17 [研究：帮浦持续给药 有助降低巴金森氏症药效波动 – 法国国际广播电台 - RFI](/articles/rfi/1027909.md)
@@ -598,6 +600,4 @@
 6-11 [反制欧美 中国通过反外国制裁法 – 法国国际广播电台 - RFI](/articles/rfi/1028205.md)
 
 6-11 [G7峰会前夕 美国第一夫人衣着展现关爱全球讯息 – 法国国际广播电台 - RFI](/articles/rfi/1028206.md)
-
-6-11 [疫情后北美线游轮首航 名人千禧号2游客阳性反应 – 法国国际广播电台 - RFI](/articles/rfi/1028207.md)
 
