--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-17 [POLITICO独家报道：五角大楼拟组建海军特遣舰队压制中国军事扩张](/articles/voa/1040096.md)
+
 6-17 [拜登和普京开始首脑会谈 白宫称不会取得大把成果](/articles/voa/1040097.md)
 
 6-17 [防敏感技术输往中国，10位国会参议员吁美商务部速列清单](/articles/voa/1040098.md)
@@ -598,6 +600,4 @@
 6-3 [习近平要塑造“可信可爱可敬”的中国形象，战狼外交走到头了？](/articles/voa/1040394.md)
 
 6-3 [时事大家谈: 特斯拉中国发展遇险，委屈能否求全？](/articles/voa/1040395.md)
-
-6-3 [北约秘书长和英首相支持对白俄罗斯做出强烈回应](/articles/voa/1040396.md)
 
