--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-17 [中国官方：台山核电厂出现燃料棒破损故障但未发生辐射泄漏事故](/articles/rfi/1027905.md)
+
+6-17 [非洲基础设施-民间投资人何以不可缺](/articles/rfi/1027906.md)
+
 6-17 [环团人士乘滑翔翼抗议 掉进欧国杯赛场致2伤 – 法国国际广播电台 - RFI](/articles/rfi/1027907.md)
 
 6-17 [普京：与拜登的会面中没有敌意 在谈论各自红线时相互理解](/articles/rfi/1027908.md)
@@ -596,8 +600,4 @@
 6-11 [投资人审慎观望Fed下周会议 日股小跌作收 – 法国国际广播电台 - RFI](/articles/rfi/1028203.md)
 
 6-11 [生涯两遇欧冠决赛输球 京多安盼欧国杯大展身手 – 法国国际广播电台 - RFI](/articles/rfi/1028204.md)
-
-6-11 [反制欧美 中国通过反外国制裁法 – 法国国际广播电台 - RFI](/articles/rfi/1028205.md)
-
-6-11 [G7峰会前夕 美国第一夫人衣着展现关爱全球讯息 – 法国国际广播电台 - RFI](/articles/rfi/1028206.md)
 
